--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -1,4 +1,4 @@
-# Ajax-Fetch-Axios三者有什么区别
+# 1. Ajax-Fetch-Axios三者有什么区别
 * 三者都用于网络请求
 * ajax 是异步网络请求的技术统称
 * fetch 是原生 api
@@ -22,8 +22,7 @@ function ajax2(url, successFn) {
 }
 // axios 
 ```
-<!--  -->
-# 防抖和节流有什么区别
+# 2. 防抖和节流有什么区别
 * 防抖，抖动停止后再触发回调
 * 例如等待搜索框输入完毕后再触发搜索
 ```javascript
@@ -52,8 +51,7 @@ function throttle(fn ,delay = 200) {
     }
 }
 ```
-<!--  -->
-# px-%-em-rem-vw-vh有什么区别
+# 3. px-%-em-rem-vw-vh有什么区别
 * px 绝对单位
 * % 相对于父元素
 * em 相对于当前元素的 font size
@@ -62,7 +60,7 @@ function throttle(fn ,delay = 200) {
 * vw 屏幕宽带 1%
 * vmin 两者最小值（vmax
 <!--  -->
-# 什么时候不能使用箭头函数
+# 4. 什么时候不能使用箭头函数
 * 没有 arguments
 * 不能修改 this
 * 对象方法不能获取到 this
@@ -71,7 +69,7 @@ function throttle(fn ,delay = 200) {
 * vue 生命周期和 method 不能使用
 * class 可以使用（react
 <!--  -->
-# TCP 三次握手和四次挥手
+# 5. TCP 三次握手和四次挥手
 * 建立 tcp 连接确保双方都有收发数据的能力
 * 通过 http 协议传输内容
 * 三次握手
@@ -84,15 +82,35 @@ function throttle(fn ,delay = 200) {
     * s 发包 c 接收（c 知道可以关闭
     * c 发包 s 接收（s 正式关闭
 <!--  -->
-# for-in 和 for-of 有什么区别
+# 6. for-in 和 for-of 有什么区别
 * in 遍历 key（不能 map set
 * of 遍历 val（不能对象
 * in 用于枚举（一一举例出来
 * of 用于迭代（可根据当前得到下一个
 <!--  -->
-# map 和 object 区别
+# 7. map 和 object 区别
 * map 保持插入顺序
 * map key 可以是任意类型
 * object key 只能 数字 字符串 symbol
 * map 可迭代
-<!--  -->
+# 8. for await of
+* 遍历异步
+# 9. 盒模型
+1. border box = content + padding + border + margin
+2. offsetHeight = content + padding + border
+3. clientHeight = content + padding
+4. scrollHeight = 实际尺寸 + padding
+# 10. HTMLCollection和NodeList有什么区别
+1. node list 包含 text comment
+# 11. computed 和 watch 区别
+1. computed 用于产生新数据
+2. watch 用于监听现有数据
+3. computed 有缓存 method 没有
+# 12. vue 组件通信方式
+1. prop emit
+2. eventbus
+3. attrs
+4. parent
+5. refs 子组件
+6. provide inject
+# 13. 
