--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -113,4 +113,16 @@ function throttle(fn ,delay = 200) {
 4. parent
 5. refs 子组件
 6. provide inject
-# 13. 
+# 13. Vuex中action和mutation有什么区别
+1. mutation 操作是原子性，同步的
+2. action 可包含多个 mutation 可异步
+# 14. JS严格模式有什么特点
+- 全局变量必须声明
+- 禁止使用 with
+- 创建 eval 作用域
+- 禁止 this 指向全局作用域
+- 函数参数不能重名
+# 15. 跨域为何需要 options 请求？
+options 请求就是对 CORS 跨域请求之间的一次预检查
+# 16. 如何检测 JS 内存泄漏？内存泄漏的场景有哪些？
+# 17. 垃圾回收算法
