--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -125,4 +125,7 @@ function throttle(fn ,delay = 200) {
 # 15. 跨域为何需要 options 请求？
 options 请求就是对 CORS 跨域请求之间的一次预检查
 # 16. 如何检测 JS 内存泄漏？内存泄漏的场景有哪些？
+
 # 17. 垃圾回收算法
+1. 引用计数（清除未被引用的，循环引用缺陷
+2. 标记清除（从根遍历各个属性，得不到对象就删除
