--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -124,8 +124,10 @@ function throttle(fn ,delay = 200) {
 - 函数参数不能重名
 # 15. 跨域为何需要 options 请求？
 options 请求就是对 CORS 跨域请求之间的一次预检查
-# 16. 如何检测 JS 内存泄漏？内存泄漏的场景有哪些？
-
+# 16. 内存泄漏的场景有哪些？
+1. 全局变量，事件，定时器的引用组件销毁时未删除
 # 17. 垃圾回收算法
 1. 引用计数（清除未被引用的，循环引用缺陷
 2. 标记清除（从根遍历各个属性，得不到对象就删除
+# 浏览器和 node 事件循环有什么区别
+1. 
