--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -129,5 +129,7 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 17. 垃圾回收算法
 1. 引用计数（清除未被引用的，循环引用缺陷
 2. 标记清除（从根遍历各个属性，得不到对象就删除
-# 浏览器和 node 事件循环有什么区别
-1. 
+# 18. 浏览器和 node 事件循环有什么区别
+1. 微任务，dom 渲染， 宏任务
+2. node 按类型优先级
+3. 
