--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -132,4 +132,9 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 18. 浏览器和 node 事件循环有什么区别
 1. 微任务，dom 渲染， 宏任务
 2. node 按类型优先级
+# 19. for 为什么快于 foreach
+1. foreach 每次需要初始化函数
+# 20. node 进程如何通信
+1. 进程是资源分配的最小单位
+2. 线程是运算调度的最小单位
 3. 
