--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -137,4 +137,9 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 20. node 进程如何通信
 1. 进程是资源分配的最小单位
 2. 线程是运算调度的最小单位
-3. 
+3. webworker 开启进程
+4. child_process fork 开启 send 传消息
+5. cluster 开启多个
+# 21. 什么是 js brige
+1. js 调用原生app api的格式
+2. 
