--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -142,4 +142,8 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 5. cluster 开启多个
 # 21. 什么是 js brige
 1. js 调用原生app api的格式
-2. 
+2. 使用 url scheme 通信
+# 22. requestIdleCallback 和requestAnimationFrame 有什么区别
+1. requestIdleCallback 空闲时执行
+2. 和requestAnimationFrame 每次渲染完都执行
+# 23. 
