--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -146,4 +146,15 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 22. requestIdleCallback 和requestAnimationFrame 有什么区别
 1. requestIdleCallback 空闲时执行
 2. 和requestAnimationFrame 每次渲染完都执行
-# 23. 
+# 23. Vue每个生命周期都做了什么
+1. before create
+    创建空白 vue 实例
+    data method 未初始化
+2. create
+    完成响应式绑定
+    data method 可调用
+    未开始渲染模板
+3. before mount
+    编译模板，render 生成 vdom
+    没有开始渲染 dom
+4. 
