--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -150,11 +150,35 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 1. before create
     创建空白 vue 实例
     data method 未初始化
-2. create
+2. created
     完成响应式绑定
     data method 可调用
     未开始渲染模板
 3. before mount
     编译模板，render 生成 vdom
     没有开始渲染 dom
-4. 
+4. mounted
+    完成 dom 渲染
+    组件创建完成
+    进入运行阶段
+5. before update
+    data 发生变化后
+    准备更新 dom
+6. updated
+    data 变化且 dom 更新完成
+    修改 data 可能死循环
+7. before unmount
+    组件进入销毁阶段
+    可解绑事件
+8. unmounted
+    组件销毁完成
+# 24. vue 什么时候操作 dom
+1. mounted 和 updated 都不能保证组件挂载完成
+2. 使用 nextTick
+# 25. ajax 放在那个周期
+1. mounted
+# 26. vue3 composition api 生命周期区别
+1. setup 代替 create
+2. hook 形式 onMounted() 代替 mounted
+# 27. vue react diff 区别
+1. 
