--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -181,4 +181,13 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 1. setup 代替 create
 2. hook 形式 onMounted() 代替 mounted
 # 27. vue react diff 区别
-1. 
+1. react 仅右移动，把原来右边挤到左边
+2. vue2 双端比较
+3. vue3 最长递增子序列作为整体
+# 28. vue for 为何使用 key
+1. diff 会根据 key 判断元素是否删除
+2. 匹配了key 只移动性能好
+3. 未匹配 key 则删除重新渲染，性能差
+# 29. vue 内存路由
+1. 在当前页面触发不同组件的渲染
+2. 路由不会变化
