--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -191,3 +191,11 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 29. vue 内存路由
 1. 在当前页面触发不同组件的渲染
 2. 路由不会变化
+# 30. 移动端H5点击有300ms延迟
+1. 监听 touchend 使用自定义的 click 把默认 click 禁掉
+2. 现代浏览器改进 width=device-width
+# 31. token和cookie有什么区别
+1. token 需要自己传递（authorization
+2. 需要自己存储
+3. 没有跨越限制
+# 32. 
