--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -198,4 +198,9 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 1. token 需要自己传递（authorization
 2. 需要自己存储
 3. 没有跨越限制
-# 32. 
+4. 保存用户全部信息
+# 32. jwt(json web token)
+1. 后端验证登录成功后返回 taoken
+2. 前端自行存储
+3. 以后访问后端都带上 token
+
