--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -199,8 +199,29 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 2. 需要自己存储
 3. 没有跨越限制
 4. 保存用户全部信息
-# 32. jwt(json web token)
+# 32. jwt (json web token
 1. 后端验证登录成功后返回 taoken
 2. 前端自行存储
 3. 以后访问后端都带上 token
-
+# 33. session和JWT哪个更好
+1. session 存储在服务端可以快速封禁某用户
+2. 占用服务端内存
+3. 多进程不好同步（redis
+4. 有跨越限制
+5. jwt 不占用服务端内存，多进程无影响
+6. 无跨域
+7. 服务端密钥泄露则用户信息全部丢失
+8. 体积大于 cookie
+# 34. 如何实现SSO单点登录
+1. 设置 cookie domain=主域名
+2. 登录校验都转发到 sso 负责
+3. oauth 由第三方下发 token 并且去第三方认证
+# 35. HTTP协议和UDP协议有什么区别
+1. http 应用层，tcp udp 传输层
+2. tcp 有连接有断开，稳定传输
+3. udp 无连接无断开，不稳定但效率高
+# 36. HTTP协议1.0和1.1和2.0有什么区别
+1. 1.0 支持基本的 get post
+2. 1.1 支持缓存策略，长连接，断定续传206，支持 put delete 用于 restful api
+3. 2.0 压缩 header，多路复用（一次连接多个并行请求，服务端推送
+# 37. 
