--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -224,4 +224,15 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 1. 1.0 支持基本的 get post
 2. 1.1 支持缓存策略，长连接，断定续传206，支持 put delete 用于 restful api
 3. 2.0 压缩 header，多路复用（一次连接多个并行请求，服务端推送
-# 37. 
+# 37. 什么是HTTPS中间人攻击，如何预防
+1. 中间人伪造公钥给客户端，通过自己的私钥解密拿到客户端和服务端通信的密钥
+2. 服务端使用正规的证书响应请求
+# 38. script标签的 defer 和 async 有什么区别
+1. defer 并行下载 js，dom 解析完后再执行
+2. async 并行下载 js 后立即执行
+# 39. prefetch和dns-prefetch分别是什么
+1. preload 优先加载
+2. prefetch 空闲时加载
+3. dns-prefetch dns 预查寻
+4. preconnect dns 预连接
+
