--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -235,4 +235,10 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 2. prefetch 空闲时加载
 3. dns-prefetch dns 预查寻
 4. preconnect dns 预连接
-
+# 40. 前端攻击手段有哪些，该如何预防
+1. xss（特殊字符替换
+2. csrf（服务端下发 token，校验 referrer，cookie 设置 samesite
+3. 点击劫持（sameorigin禁止iframe跨域加载
+4. ddos
+5. sql 注入
+# 41. WebSocket和HTTP协议有什么区别
