--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -244,3 +244,6 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 41. WebSocket和HTTP协议有什么区别
 1. ws 可以双端通信
 2. 没有跨越限制
+# 42. WebSocket和HTTP长轮询的区别
+1. http 需要等待服务端返回才能再次请
+2. ws 可以双方任意发送
