--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -238,7 +238,7 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 40. 前端攻击手段有哪些，该如何预防
 1. xss（特殊字符替换
 2. csrf（服务端下发 token，校验 referrer，cookie 设置 samesite
-3. 点击劫持（sameorigin禁止iframe跨域加载
+3. 点击劫持（sameorigin 禁止iframe跨域加载
 4. ddos
 5. sql 注入
 # 41. WebSocket和HTTP协议有什么区别
@@ -247,3 +247,25 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 42. WebSocket和HTTP长轮询的区别
 1. http 需要等待服务端返回才能再次请
 2. ws 可以双方任意发送
+# 43. 从输入URL 到网页显示的完整过程
+1. dns解析，http请求
+2. 解析 dom树，cssom树，render树
+3. 计算dom尺寸定位，绘制到页面，执行js
+# 44. 网页重绘repaint和重排reflow有什么区别
+1. repaint 颜色变化
+2. reflow 位置变化
+# 45. 减少重排
+1. 集中修改样式
+2. 先 display none 或 使用 bfc
+3. 使用节流防抖
+4. createdocumentFragment 批量操作 dom
+5. 使用 css3 或 requestAnimationFrame 做动画
+# 46. 如何实现网页多标签tab通讯
+1. ws
+2. localstorage
+3. sharedworker 
+# 47. 如何实现网页和iframe之间的通讯
+1. postMessage 发送
+2. on message 接受
+# 48. 请描述koa2的洋葱圈模型
+1. 
