--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -268,4 +268,45 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 1. postMessage 发送
 2. on message 接受
 # 48. 请描述koa2的洋葱圈模型
-1. 
+1. 捕获再冒泡
+# 49. H5页面如何进行首屏优化
+1. 路由懒加载
+2. ssr
+3. app 预取（js bridge
+4. 图片懒加载（提前设置图片尺寸防止重排
+5. hybrid（提前下载资源到app内部
+6. 分页
+# 50. 后端一次性返回10w条数据，你该如何渲染
+1. 自定义 node 中间层拆分数据
+2. 虚拟列表（只渲染可视区域，随浏览器滚动创建销毁dom
+# 51. 前端常用的设计模式和使用场景
+1. 单例模式（vuex store
+2. 工厂模式（createElement
+3. 代理模式（proxy
+4. 观察者（addEventlistener
+5. 发布订阅（on，emit
+6. 装饰器（原功能不变增加新功能，decorator
+# 52. 观察者模式和发布订阅模式的区别
+1. 主体和观察者直接绑定
+2. 发布者和观察者互相不认识，需要中间媒介
+# 53. 在实际工作中，你对Vue做过哪些优化
+1. v-show
+2. v-for 使用 key
+3. computed 缓存
+4. keep alive 缓存组件
+5. 异步组件（使用时才加载
+6. 路由懒加载
+7. ssr
+# 54. 你在使用Vue过程中遇到过哪些坑
+1. 内存泄漏全局变量未销毁
+2. vue2 响应式缺陷
+3. 路由切换滚到顶部（缓存原页面数据和scrolltop
+4. mpa+app webview
+# 55. 如何统一监听Vue组件报错
+1. window.onerror（识别不了 vue，可识别异步
+2. errorCapture（监听下级，返回 fasle 不会向上传播
+3. errorHanler（监听所有组件
+# 56. 如果一个H5很慢，如何排查性能问题
+1. 加载慢（cdn，路由懒加载，组件异步加载，http缓存
+2. 渲染慢（优化服务端接口，优化组件内部逻辑，ssr
+3. 
