--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -309,3 +309,834 @@ options 请求就是对 CORS 跨域请求之间的一次预检查
 # 56. 如果一个H5很慢，如何排查性能问题
 1. 加载慢（cdn，路由懒加载，组件异步加载，http缓存
 2. 渲染慢（优化服务端接口，优化组件内部逻辑，ssr
+# 57. 手写一个JS函数，实现数组扁平化Array Flatten
+```javascript
+/**
+ * 数组扁平化，使用 push
+ * @param arr arr
+ */
+export function flatten1(arr: any[]): any[] {
+    const res: any[] = []
+
+    arr.forEach(item => {
+        if (Array.isArray(item)) {
+            item.forEach(n => res.push(n))
+        } else {
+            res.push(item)
+        }
+    })
+
+    return res
+}
+
+/**
+ * 数组扁平化，使用 concat
+ * @param arr arr
+ */
+export function flatten2(arr: any[]): any[] {
+    let res: any[] = []
+
+    arr.forEach(item => {
+        res = res.concat(item)
+    })
+
+    return res
+}
+
+/**
+ * 数组深度扁平化，使用 push
+ * @param arr arr
+ */
+export function flattenDeep1(arr: any[]): any[] {
+    const res: any[] = []
+
+    arr.forEach(item => {
+        if (Array.isArray(item)) {
+            const flatItem = flattenDeep1(item) // 递归
+            flatItem.forEach(n => res.push(n))
+        } else {
+            res.push(item)
+        }
+    })
+
+    return res
+}
+// // 功能测试
+// const arr = [1, [2, [3], 4], 5]
+// console.info( flatten2(arr) )
+
+/**
+ * 数组深度扁平化，使用 concat
+ * @param arr arr
+ */
+export function flattenDeep2(arr: any[]): any[] {
+    let res: any[] = []
+
+    arr.forEach(item => {
+        if (Array.isArray(item)) {
+            const flatItem = flattenDeep2(item) // 递归
+            res = res.concat(flatItem)
+        } else {
+            res = res.concat(item)
+        }
+    })
+
+    return res
+}
+
+
+// // 功能测试
+// const arr = [1, [2, [3, ['a', [true], 'b'], 4], 5], 6]
+// console.info( flattenDeep2(arr) )
+```
+# 58. 手写一个getType函数，获取详细的数据类型
+```javascript
+export function getType(x: any): string {
+    const originType = Object.prototype.toString.call(x) // '[object String]'
+    const spaceIndex = originType.indexOf(' ')
+    const type = originType.slice(spaceIndex + 1, -1) // 'String'
+    return type.toLowerCase() // 'string'
+}
+
+// // 功能测试
+// console.info( getType(null) ) // 'null'
+// console.info( getType(undefined) )
+// console.info( getType(100) )
+// console.info( getType('abc') )
+// console.info( getType(true) )
+// console.info( getType(Symbol()) )
+// console.info( getType({}) )
+// console.info( getType([]) )
+// console.info( getType(() => {}) )
+```
+# 59. new 一个对象内部发生了什么，手写代码表示
+```javascript
+export function customNew<T>(constructor: Function, ...args: any[]): T {
+    // 1. 创建一个空对象，继承 constructor 的原型
+    const obj = Object.create(constructor.prototype)
+    // 2. 将 obj 作为 this ，执行 constructor ，传入参数
+    constructor.apply(obj, args)
+    // 3. 返回 obj
+    return obj
+}
+
+// class Foo {
+//     // 属性
+//     name: string
+//     city: string
+//     n: number
+
+//     constructor(name: string, n: number) {
+//         this.name = name
+//         this.city = '北京'
+//         this.n = n
+//     }
+
+//     getName() {
+//         return this.name
+//     }
+// }
+
+// const f = new Foo('双越', 100)
+// // const f = customNew<Foo>(Foo, '双越', 100)
+// console.info(f)
+// console.info(f.getName())
+```
+# 60. Object.create 和 {} 的区别
+`Object.create` 可以指定原型，创建一个空对象。<br>
+`{}` 就相当于 `Object.create(Object.prototype)` ，即根据 `Object` 原型的空对象。
+# 61. 写一个函数遍历 DOM 树，分别用深度优先和广度优先
+```javascript
+/**
+ * 访问节点
+ * @param n node
+ */
+function visitNode(n: Node) {
+    if (n instanceof Comment) {
+        // 注释
+        console.info('Comment node ---', n.textContent)
+    }
+    if (n instanceof Text) {
+        // 文本
+        const t = n.textContent?.trim()
+        if (t) {
+            console.info('Text node ---', t)
+        }
+    }
+    if (n instanceof HTMLElement) {
+        // element
+        console.info('Element node ---', `<${n.tagName.toLowerCase()}>`)
+    }
+}
+
+/**
+ * 深度优先遍历
+ * @param root dom node
+ */
+function depthFirstTraverse1(root: Node) {
+    visitNode(root)
+
+    const childNodes = root.childNodes // .childNodes 和 .children 不一样
+    if (childNodes.length) {
+        childNodes.forEach(child => {
+            depthFirstTraverse1(child) // 递归
+        })
+    }
+}
+
+/**
+ * 深度优先遍历
+ * @param root dom node
+ */
+ function depthFirstTraverse2(root: Node) {
+     const stack: Node[] = []
+
+     // 根节点压栈
+     stack.push(root)
+
+     while (stack.length > 0) {
+         const curNode = stack.pop() // 出栈
+         if (curNode == null) break
+
+         visitNode(curNode)
+
+         // 子节点压栈
+         const childNodes = curNode.childNodes
+         if (childNodes.length > 0) {
+             // reverse 反顺序压栈
+             Array.from(childNodes).reverse().forEach(child => stack.push(child))
+         }
+     }
+ }
+
+/**
+ * 广度优先遍历
+ * @param root dom node
+ */
+function breadthFirstTraverse(root: Node) {
+    const queue: Node[] = [] // 数组 vs 链表
+
+    // 根节点入队列
+    queue.unshift(root)
+
+    while (queue.length > 0) {
+        const curNode = queue.pop()
+        if (curNode == null) break
+
+        visitNode(curNode)
+
+        // 子节点入队
+        const childNodes = curNode.childNodes
+        if (childNodes.length) {
+            childNodes.forEach(child => queue.unshift(child))
+        }
+    }
+}
+
+const box = document.getElementById('box')
+if (box == null) throw new Error('box is null')
+depthFirstTraverse2(box)
+
+```
+# 62. 手写 LazyMan ，实现 `sleep` 和 `eat` 两个方法，支持链式调用。
+```js
+class LazyMan {
+    private name: string
+    private tasks: Function[] = [] // 任务列表
+
+    constructor(name: string) {
+        this.name = name
+
+        setTimeout(() => {
+            this.next()
+        })
+    }
+
+    private next() {
+        const task = this.tasks.shift() // 取出当前 tasks 的第一个任务
+        if (task) task()
+    }
+
+    eat(food: string) {
+        const task = () => {
+            console.info(`${this.name} eat ${food}`)
+            this.next() // 立刻执行下一个任务
+        }
+        this.tasks.push(task)
+
+        return this // 链式调用
+    }
+
+    sleep(seconds: number) {
+        const task = () => {
+            console.info(`${this.name} 开始睡觉`)
+            setTimeout(() => {
+                console.info(`${this.name} 已经睡完了 ${seconds}s，开始执行下一个任务`)
+                this.next() // xx 秒之后再执行下一个任务
+            }, seconds * 1000)
+        }
+        this.tasks.push(task)
+
+        return this // 链式调用
+    }
+}
+
+const me = new LazyMan('双越')
+me.eat('苹果').eat('香蕉').sleep(2).eat('葡萄').eat('西瓜').sleep(2).eat('橘子')
+
+```
+# 63. 写一个 `curry` 函数，可以把其他函数转为 curry 函数
+```js
+export function curry(fn: Function) {
+    const fnArgsLength = fn.length // 传入函数的参数长度
+    let args: any[] = []
+
+    // ts 中，独立的函数，this 需要声明类型
+    function calc(this: any, ...newArgs: any[]) {
+        // 积累参数
+        args = [
+            ...args,
+            ...newArgs
+        ]
+        if (args.length < fnArgsLength) {
+            // 参数不够，返回函数
+            return calc
+        } else {
+            // 参数够了，返回执行结果
+            return fn.apply(this, args.slice(0, fnArgsLength))
+        }
+    }
+
+    return calc
+}
+
+// function add(a: number, b: number, c: number): number {
+//     return a + b + c
+// }
+// // add(10, 20, 30) // 60
+
+// const curryAdd = curry(add)
+// const res = curryAdd(10)(20)(30) // 60
+// console.info(res)
+```
+# 64. instanceof 的原理是什么，请用代码来表示
+```js
+/**
+ * 自定义 instanceof
+ * @param instance instance
+ * @param origin class or function
+ */
+export function myInstanceof(instance: any, origin: any): boolean {
+    if (instance == null) return false // null undefined
+
+    const type = typeof instance
+    if (type !== 'object' && type !== 'function') {
+        // 值类型
+        return false
+    }
+
+    let tempInstance = instance // 为了防止修改 instance
+    while (tempInstance) {
+        if (tempInstance.__proto__ === origin.prototype) {
+            return true // 配上了
+        }
+        // 未匹配
+        tempInstance = tempInstance.__proto__ // 顺着原型链，往上找
+    }
+
+    return false
+}
+
+// // 功能测试
+// console.info( myInstanceof({}, Object) )
+// console.info( myInstanceof([], Object) )
+// console.info( myInstanceof([], Array) )
+// console.info( myInstanceof({}, Array) )
+// console.info( myInstanceof('abc', String) )
+
+```
+# 65. 请手写实现函数 bind
+```js
+Function.prototype.customBind = function (context: any, ...bindArgs: any[]) {
+    // context 是 bind 传入的 this
+    // bindArgs 是 bind 传入的各个参数
+
+    const self = this // 当前的函数本身
+
+    return function (...args: any[]) {
+        // 拼接参数
+        const newArgs = bindArgs.concat(args)
+        return self.apply(context, newArgs)
+    }
+}
+
+// // 功能测试
+// function fn(this: any, a: any, b: any, c: any) {
+//     console.info(this, a, b, c)
+// }
+// // @ts-ignore
+// const fn1 = fn.customBind({x: 100}, 10)
+// fn1(20, 30)
+```
+# 66. 请手写 EventBus 自定义事件，实现 `no` `once` `emit` 和 `off`
+```js
+export default class EventBus {
+    /**
+     * {
+     *    'key1': [
+     *        { fn: fn1, isOnce: false },
+     *        { fn: fn2, isOnce: false },
+     *        { fn: fn3, isOnce: true },
+     *    ]
+     *    'key2': [] // 有序
+     *    'key3': []
+     * }
+     */
+    private events: {
+        [key: string]: Array<{fn: Function; isOnce: boolean}>
+    }
+
+    constructor() {
+        this.events = {}
+    }
+
+    on(type: string, fn: Function, isOnce: boolean = false) {
+        const events = this.events
+        if (events[type] == null) {
+            events[type] = [] // 初始化 key 的 fn 数组
+        }
+        events[type].push({ fn, isOnce })
+    }
+
+    once(type: string, fn: Function) {
+        this.on(type, fn, true)
+    }
+
+    off(type: string, fn?: Function) {
+        if (!fn) {
+            // 解绑所有 type 的函数
+            this.events[type] = []
+        } else {
+            // 解绑单个 fn
+            const fnList = this.events[type]
+            if (fnList) {
+                this.events[type] = fnList.filter(item => item.fn !== fn)
+            }
+        }
+    }
+
+    emit(type: string, ...args: any[]) {
+        const fnList = this.events[type]
+        if (fnList == null) return
+
+        // 注意
+        this.events[type] = fnList.filter(item => {
+            const { fn, isOnce } = item
+            fn(...args)
+
+            // once 执行一次就要被过滤掉
+            if (!isOnce) return true
+            return false
+        })
+    }
+}
+
+// const e = new EventBus()
+
+// function fn1(a: any, b: any) { console.log('fn1', a, b) }
+// function fn2(a: any, b: any) { console.log('fn2', a, b) }
+// function fn3(a: any, b: any) { console.log('fn3', a, b) }
+
+// e.on('key1', fn1)
+// e.on('key1', fn2)
+// e.once('key1', fn3)
+// e.on('xxxxxx', fn3)
+
+// e.emit('key1', 10, 20) // 触发 fn1 fn2 fn3
+
+// e.off('key1', fn1)
+
+// e.emit('key1', 100, 200) // 触发 fn2
+
+```
+# 67. 手写函数 call 和 apply
+```js
+// @ts-ignore
+Function.prototype.customCall = function (context: any, ...args: any[]) {
+    if (context == null) context = globalThis
+    if (typeof context !== 'object') context = new Object(context) // 值类型，变为对象
+
+    const fnKey = Symbol() // 不会出现属性名称的覆盖
+    context[fnKey] = this // this 就是当前的函数
+
+    const res = context[fnKey](...args) // 绑定了 this
+
+    delete context[fnKey] // 清理掉 fn ，防止污染
+
+    return res
+}
+
+// @ts-ignore
+Function.prototype.customApply = function (context: any, args: any[] = []) {
+    if (context == null) context = globalThis
+    if (typeof context !== 'object') context = new Object(context) // 值类型，变为对象
+
+    const fnKey = Symbol() // 不会出现属性名称的覆盖
+    context[fnKey] = this // this 就是当前的函数
+
+    const res = context[fnKey](...args) // 绑定了 this
+
+    delete context[fnKey] // 清理掉 fn ，防止污染
+
+    return res
+}
+
+function fn(this: any, a: any, b: any, c: any) {
+    console.info(this, a, b, c)
+}
+// // @ts-ignore
+// fn.customCall({x: 100}, 10, 20, 30)
+// @ts-ignore
+// fn.customApply({x: 200}, [100, 200, 300])
+
+```
+# 68. EventBus 里的数组可以换成 Set 吗？
+数组和 Set 比较 （除了语法 API）
+- 数组，有序结构，查找、中间插入、中间删除比较慢
+- Set 不可排序的，插入和删除都很快
+答案：不可以，Set 是不可排序的，如再增加一些“权重”之类的需求，将不好实现。
+# 69. 用 JS 实现一个 LRU 缓存
+```js
+export default class LRUCache {
+    private length: number
+    private data: Map<any, any> = new Map()
+
+    constructor(length: number) {
+        if (length < 1) throw new Error('invalid length')
+        this.length = length
+    }
+
+    set(key: any, value: any) {
+        const data = this.data
+
+        if (data.has(key)) {
+            data.delete(key)
+        }
+        data.set(key, value)
+
+        if (data.size > this.length) {
+            // 如果超出了容量，则删除 Map 最老的元素
+            const delKey = data.keys().next().value
+            data.delete(delKey)
+        }
+    }
+
+    get(key: any): any {
+        const data = this.data
+
+        if (!data.has(key)) return null
+
+        const value = data.get(key)
+
+        data.delete(key)
+        data.set(key, value)
+
+        return value
+    }
+}
+
+// const lruCache = new LRUCache(2)
+// lruCache.set(1, 1) // {1=1}
+// lruCache.set(2, 2) // {1=1, 2=2}
+// console.info(lruCache.get(1)) // 1 {2=2, 1=1}
+// lruCache.set(3, 3) // {1=1, 3=3}
+// console.info(lruCache.get(2)) // null
+// lruCache.set(4, 4) // {3=3, 4=4}
+// console.info(lruCache.get(1)) // null
+// console.info(lruCache.get(3)) // 3 {4=4, 3=3}
+// console.info(lruCache.get(4)) // 4 {3=3, 4=4}
+
+```
+# 70. 不用 Map 如何实现 LRU cache ？
+```js
+interface IListNode {
+    value: any
+    key: string // 存储 key ，方便删除（否则删除时就需要遍历 this.data )
+    prev?: IListNode
+    next?: IListNode
+}
+
+export default class LRUCache {
+    private length: number
+    private data: { [key: string]: IListNode } = {}
+    private dataLength: number = 0
+    private listHead: IListNode | null = null
+    private listTail: IListNode | null = null
+
+    constructor(length: number) {
+        if (length < 1) throw new Error('invalid length')
+        this.length = length
+    }
+
+    private moveToTail(curNode: IListNode) {
+        const tail = this.listTail
+        if (tail === curNode) return
+
+        // -------------- 1. 让 prevNode nextNode 断绝与 curNode 的关系 --------------
+        const prevNode = curNode.prev
+        const nextNode = curNode.next
+        if (prevNode) {
+            if (nextNode) {
+                prevNode.next = nextNode
+            } else {
+                delete prevNode.next
+            }
+        }
+        if (nextNode) {
+            if (prevNode) {
+                nextNode.prev = prevNode
+            } else {
+                delete nextNode.prev
+            }
+
+            if (this.listHead === curNode) this.listHead = nextNode
+        }
+
+        // -------------- 2. 让 curNode 断绝与 prevNode nextNode 的关系 --------------
+        delete curNode.prev
+        delete curNode.next
+
+        // -------------- 3. 在 list 末尾重新建立 curNode 的新关系 --------------
+        if (tail) {
+            tail.next = curNode
+            curNode.prev = tail
+        }
+        this.listTail = curNode
+    }
+
+    private tryClean() {
+        while (this.dataLength > this.length) {
+            const head = this.listHead
+            if (head == null) throw new Error('head is null')
+            const headNext = head.next
+            if (headNext == null) throw new Error('headNext is null')
+
+            // 1. 断绝 head 和 next 的关系
+            delete headNext.prev
+            delete head.next
+
+            // 2. 重新赋值 listHead
+            this.listHead = headNext
+
+            // 3. 清理 data ，重新计数
+            delete this.data[head.key]
+            this.dataLength = this.dataLength - 1
+        }
+    }
+
+    get(key: string): any {
+        const data = this.data
+        const curNode = data[key]
+
+        if (curNode == null) return null
+
+        if (this.listTail === curNode) {
+            // 本身在末尾（最新鲜的位置），直接返回 value
+            return curNode.value
+        }
+
+        // curNode 移动到末尾
+        this.moveToTail(curNode)
+
+        return curNode.value
+    }
+
+    set(key: string, value: any) {
+        const data = this.data
+        const curNode = data[key]
+
+        if (curNode == null) {
+            // 新增数据
+            const newNode: IListNode = { key, value }
+            // 移动到末尾
+            this.moveToTail(newNode)
+
+            data[key] = newNode
+            this.dataLength++
+
+            if (this.dataLength === 1) this.listHead = newNode
+        } else {
+            // 修改现有数据
+            curNode.value = value
+            // 移动到末尾
+            this.moveToTail(curNode)
+        }
+
+        // 尝试清理长度
+        this.tryClean()
+    }
+}
+
+// const lruCache = new LRUCache(2)
+// lruCache.set('1', 1) // {1=1}
+// lruCache.set('2', 2) // {1=1, 2=2}
+// console.info(lruCache.get('1')) // 1 {2=2, 1=1}
+// lruCache.set('3', 3) // {1=1, 3=3}
+// console.info(lruCache.get('2')) // null
+// lruCache.set('4', 4) // {3=3, 4=4}
+// console.info(lruCache.get('1')) // null
+// console.info(lruCache.get('3')) // 3 {4=4, 3=3}
+// console.info(lruCache.get('4')) // 4 {3=3, 4=4}
+
+```
+# 71. 手写 JS 深拷贝
+```js
+// /**
+//  * 深拷贝 - 只考虑了简单的数组、对象
+//  * @param obj obj
+//  */
+// function cloneDeep(obj: any) {
+//     if (typeof obj !== 'object' || obj == null ) return obj
+
+//     let result: any
+//     if (obj instanceof Array) {
+//         result = []
+//     } else {
+//         result = {}
+//     }
+
+//     for (let key in obj) {
+//         if (obj.hasOwnProperty(key)) {            
+//             result[key] = cloneDeep(obj[key]) // 递归调用
+//         }
+//     }
+
+//     return result
+// }
+// // 功能测试
+// const a: any = {
+//     set: new Set([10, 20, 30]),
+//     map: new Map([['x', 10], ['y', 20]])
+// }
+// a.self = a
+// console.log( cloneDeep(a) ) // 无法处理 Map Set 和循环引用
+
+/**
+ * 深拷贝
+ * @param obj obj
+ * @param map weakmap 为了避免循环引用
+ */
+export function cloneDeep(obj: any, map = new WeakMap()): any {
+    if (typeof obj !== 'object' || obj == null ) return obj
+
+    // 避免循环引用
+    const objFromMap = map.get(obj)
+    if (objFromMap) return objFromMap
+
+    let target: any = {}
+    map.set(obj, target)
+
+    // Map
+    if (obj instanceof Map) {
+        target = new Map()
+        obj.forEach((v, k) => {
+            const v1 = cloneDeep(v, map)
+            const k1 = cloneDeep(k, map)
+            target.set(k1, v1)
+        })
+    }
+
+    // Set
+    if (obj instanceof Set) {
+        target = new Set()
+        obj.forEach(v => {
+            const v1 = cloneDeep(v, map)
+            target.add(v1)
+        })
+    }
+
+    // Array
+    if (obj instanceof Array) {
+        target = obj.map(item => cloneDeep(item, map))
+    }
+
+    // Object
+    for (const key in obj) {
+        const val = obj[key]
+        const val1 = cloneDeep(val, map)
+        target[key] = val1
+    }
+
+    return target
+}
+
+// // 功能测试
+// const a: any = {
+//     set: new Set([10, 20, 30]),
+//     map: new Map([['x', 10], ['y', 20]]),
+//     info: {
+//         city: '北京'
+//     },
+//     fn: () => { console.info(100) }
+// }
+// a.self = a
+// console.log( cloneDeep(a) )
+```
+# 72. 讲以下 DOM 结构转换为 vnode 数据
+```html
+<div id="div1" style="border: 1px solid #ccc; padding: 10px;">
+    <p>一行文字<a href="xxx.html" target="_blank">链接</a></p>
+    <img src="xxx.png" alt="图片" class="image"/>
+    <button click="clickHandler">点击</button>
+</div>
+```
+```js
+const vnode = {
+    tag: 'div', // <div>
+    data: {
+        id: 'div1',
+        style: {
+            'border': '1px solid #ccc',
+            'padding': '10px'
+        }
+    },
+    children: [
+        {
+            tag: 'p', // <p>
+            data: {},
+            children: [
+                '一行文字',
+                {
+                    tag: 'a', // <a>
+                    data: {
+                        href: 'xxx.html',
+                        target: '_blank'
+                    },
+                    children: ['链接']
+                }
+            ]
+        },
+        {
+            tag: 'img', // <img>
+            data: {
+                className: 'image', // 注意，这里要用 className
+                src: 'xxx.png',
+                alt: '图片'
+            }
+        },
+        {
+            tag: 'button', // <button>
+            data: {
+                events: {
+                    click: clickHandler
+                }
+            }
+            children: ['点击']
+        }
+    ]
+}
+```
+# 73. 
+```js
+```
+
