--- a/100道前端面试题.md
+++ b/100道前端面试题.md
@@ -1136,7 +1136,464 @@ const vnode = {
     ]
 }
 ```
-# 73. 
+# 73. 定义一个 `convert` 函数，将以下数组转换为树结构。
 ```js
+interface IArrayItem {
+    id: number
+    name: string
+    parentId: number
+}
+
+interface ITreeNode {
+    id: number
+    name: string
+    children?: ITreeNode[]
+}
+
+function convert(arr: IArrayItem[]): ITreeNode | null {
+    // 用于 id 和 treeNode 的映射
+    const idToTreeNode: Map<number, ITreeNode> = new Map()
+
+    let root = null
+
+    arr.forEach(item => {
+        const { id, name, parentId } = item
+
+        // 定义 tree node 并加入 map
+        const treeNode: ITreeNode = { id, name }
+        idToTreeNode.set(id, treeNode)
+
+        // 找到 parentNode 并加入到它的 children
+        const parentNode = idToTreeNode.get(parentId)
+        if (parentNode) {
+            if (parentNode.children == null) parentNode.children = []
+            parentNode.children.push(treeNode)
+        }
+
+        // 找到根节点
+        if (parentId === 0) root = treeNode
+    })
+
+    return root
+}
+
+const arr = [
+    { id: 1, name: '部门A', parentId: 0 }, // 0 代表顶级节点，无父节点
+    { id: 2, name: '部门B', parentId: 1 },
+    { id: 3, name: '部门C', parentId: 1 },
+    { id: 4, name: '部门D', parentId: 2 },
+    { id: 5, name: '部门E', parentId: 2 },
+    { id: 6, name: '部门F', parentId: 3 },
+]
+const tree = convert(arr)
+console.info(tree)
+```
+# 74. 定义一个 `convert` 函数，将以下对象转换为数组
+```js
+/**
+ * @description tree to arr
+ * @author 双越老师
+ */
+
+interface IArrayItem {
+    id: number
+    name: string
+    parentId: number
+}
+
+interface ITreeNode {
+    id: number
+    name: string
+    children?: ITreeNode[]
+}
+
+function convert1(root: ITreeNode): IArrayItem[] {
+    // Map
+    const nodeToParent: Map<ITreeNode, ITreeNode> = new Map()
+
+    const arr: IArrayItem[] = []
+
+    // 广度优先遍历，queue
+    const queue: ITreeNode[] = []
+    queue.unshift(root) // 根节点 入队
+
+    while (queue.length > 0) {
+        const curNode = queue.pop() // 出队
+        if (curNode == null) break
+
+        const { id, name, children = [] } = curNode
+
+        // 创建数组 item 并 push
+        const parentNode = nodeToParent.get(curNode)
+        const parentId = parentNode?.id || 0
+        const item = { id, name, parentId }
+        arr.push(item)
+
+        // 子节点入队
+        children.forEach(child => {
+            // 映射 parent
+            nodeToParent.set(child, curNode)
+            // 入队
+            queue.unshift(child)
+        })
+    }
+
+    return arr
+}
+
+const obj = {
+    id: 1,
+    name: '部门A',
+    children: [
+        {
+            id: 2,
+            name: '部门B',
+            children: [
+                { id: 4, name: '部门D' },
+                { id: 5, name: '部门E' }
+            ]
+        },
+        {
+            id: 3,
+            name: '部门C',
+            children: [
+                { id: 6, name: '部门F' }
+            ]
+        }
+    ]
+}
+const arr1 = convert1(obj)
+console.info(arr1)
+
+```
+# 75. `['1', '2', '3'].map(parseInt)` 输出什么？
+`parseInt(string, radix)` 解析一个字符串并返回指定基数的**十进制**整数
+- `string` 要解析的字符串
+- `radix` 可选参数，数字基数（即进制），范围为 2-36
+
+示例
+
+```js
+parseInt('11', 1) // NaN ，1 非法，不在 2-36 范围之内
+parseInt('11', 2) // 3 = 1*2 + 1
+parseInt('3', 2) // NaN ，2 进制中不存在 3
+parseInt('11', 3) // 4 = 1*3 + 1
+parseInt('11', 8) // 9 = 1*8 + 1
+parseInt('9', 8) // NaN ，8 进制中不存在 9
+parseInt('11', 10) // 11
+parseInt('A', 16) // 10 ，超过 10 进制，个位数就是 1 2 3 4 5 6 7 8 9 A B C D ...
+parseInt('F', 16) // 15
+parseInt('G', 16) // NaN ，16 进制个位数最多是 F ，不存在 G
+parseInt('1F', 16) // 31 = 1*16 + F
+```
+题目代码可以拆解为
+
+```js
+const arr = ['1', '2', '3']
+const res = arr.map((s, index) => {
+    console.log(`s is ${s}, index is ${index}`)
+    return parseInt(s, index)
+})
+console.log(res)
 ```
 
+分析执行过程
+
+```js
+parseInt('1', 0) // 1 ，radix === 0 按 10 进制处理
+parseInt('2', 1) // NaN ，radix === 1 非法（不在 2-36 之内）
+parseInt('3', 2) // NaN ，2 进制中没有 3
+```
+答案
+
+```js
+['1', '2', '3'].map(parseInt) // [1, NaN, NaN]
+```
+# 76. 以下代码，执行会输出什么？
+```js
+function Foo() {
+    Foo.a = function() { console.log(1) }
+    this.a = function() { console.log(2) }
+}
+Foo.prototype.a = function() { console.log(3) }
+Foo.a = function() { console.log(4) }
+
+Foo.a()
+let obj = new Foo()
+obj.a()
+Foo.a()
+// 执行输出 `4 2 1`
+```
+# 77. 以下代码，执行会输出什么
+```js
+Promise.resolve().then(() => {
+    console.log(0)
+    return Promise.resolve(4)
+}).then((res) => {
+    console.log(res)
+})
+
+Promise.resolve().then(() => {
+    console.log(1)
+}).then(() => {
+    console.log(2)
+}).then(() => {
+    console.log(3)
+}).then(() => {
+    console.log(5)
+}).then(() =>{
+    console.log(6)
+})
+```
+```js
+## then 交替执行
+
+如果有多个 fulfilled 状态的 promise 实例，同时执行 then 链式调用，then 会交替调用<br>
+这是编译器的优化，防止一个 promise 持续占据事件
+
+```js
+Promise.resolve().then(() => {
+    console.log(1)
+}).then(() => {
+    console.log(2)
+}).then(() => {
+    console.log(3)
+}).then(() => {
+    console.log(4)
+})
+
+Promise.resolve().then(() => {
+    console.log(10)
+}).then(() => {
+    console.log(20)
+}).then(() => {
+    console.log(30)
+}).then(() => {
+    console.log(40)
+})
+
+Promise.resolve().then(() => {
+    console.log(100)
+}).then(() => {
+    console.log(200)
+}).then(() => {
+    console.log(300)
+}).then(() => {
+    console.log(400)
+})
+```
+
+## then 返回 promise 对象
+
+当 then 返回 promise 对象时，可以认为是多出一个 promise 实例。
+
+```js
+Promise.resolve().then(() => {
+    console.log(1)
+    return Promise.resolve(100) // 相当于多处一个 promise 实例，如下注释的代码
+}).then(res => {
+    console.log(res)
+}).then(() => {
+    console.log(200)
+}).then(() => {
+    console.log(300)
+}).then(() => {
+    console.log(300)
+})
+
+Promise.resolve().then(() => {
+    console.log(10)
+}).then(() => {
+    console.log(20)
+}).then(() => {
+    console.log(30)
+}).then(() => {
+    console.log(40)
+})
+
+// // 相当于新增一个 promise 实例 —— 但这个执行结果不一样，后面解释
+// Promise.resolve(100).then(res => {
+//     console.log(res)
+// }).then(() => {
+//     console.log(200)
+// }).then(() => {
+//     console.log(300)
+// }).then(() => {
+//     console.log(400)
+// })
+```
+
+## “慢两拍”
+
+then 返回 promise 实例和直接执行 `Promise.resolve()` 不一样，它需要等待两个过程
+- promise 状态由 pending 变为 fulfilled
+- then 函数挂载到 microTaskQueue
+
+所以，它变现的会“慢两拍”。可以理解为
+
+```js
+Promise.resolve().then(() => {
+    console.log(1)
+})
+
+Promise.resolve().then(() => {
+    console.log(10)
+}).then(() => {
+    console.log(20)
+}).then(() => {
+    console.log(30)
+}).then(() => {
+    console.log(40)
+})
+
+Promise.resolve().then(() => {
+    // 第一拍
+    const p = Promise.resolve(100)
+    Promise.resolve().then(() => {
+        // 第二拍
+        p.then(res => {
+            console.log(res)
+        }).then(() => {
+            console.log(200)
+        }).then(() => {
+            console.log(300)
+        }).then(() => {
+            console.log(400)
+        })
+    })
+})
+## 答案
+
+题目代码输出的结果是 `1 2 3 4 5 6`
+```
+# 78. 以下代码，运行会输出什么
+
+```js
+let a = { n: 1 }
+let b = a
+a.x = a = { n: 2 }
+
+console.log(a.x) 	
+console.log(b.x)
+```
+
+## `.` 优先级更高
+
+```js
+let a = {}
+a.x = 100
+
+// 可拆解为：
+// 1. a.x = undefined // 初始化 a.x 属性
+// 2. a.x = 100 // 为 x 属性赋值
+
+```
+
+再看下面的例子
+
+```js
+let a = { n: 1 }
+a.x = a = { n: 2 }
+
+// // 可以拆解为
+// a.x = undefined
+// let x = a.x // x 变量是假想的，实际执行时不会有
+// x = a = { n: 2 }
+```
+
+## 答案
+
+题目代码执行打印 `undefined` 和 `{ n: 2 }`
+
+其实把 `a.x = a = { n: 2 }` 换成 `b.x = a = { n: 2 }` 更好理解
+
+或者把连续赋值拆分为 `a.x = { n: 2 }; a = { n: 2 }` （优先级高的，先执行）
+# 79. 执行以下代码，会输出什么
+```js
+// example1
+let a = {}, b = '123', c = 123
+a[b] = 'b'
+a[c] = 'c'
+console.log(a[b])
+
+// example 2
+let a = {}, b = Symbol('123'), c = Symbol('123')
+a[b] = 'b'
+a[c] = 'c'
+console.log(a[b])
+
+// example 3
+let a = {}, b = { key:'123' }, c = { key:'456' }
+a[b] = 'b'
+a[c] = 'c'
+console.log(a[b])
+```
+
+## 对象的 key
+
+- 对象的键名只能是字符串和 Symbol 类型
+- 其他类型的键名会被转换成字符串类型
+- 对象转字符串默认会调用 `toString` 方法
+
+```js
+const obj = {}
+obj[0] = 100
+const x = { s: 'abc' }
+obj[x] = 200
+const y = Symbol()
+obj[y] = 300
+const z = true
+obj[z] = 400
+
+Object.keys(obj) // ['0', '[object Object]', 'true']
+```
+有些类数组的结构是 `{ 0: x, 1: y, 2: z, length: 3 }` ，如 `document.getElementsByTagName('div')`<br>
+实际上它的 key 是 `['0', '1', '2', 'length']`
+题目代码执行分别打印 `'c' 'b' 'c'`
+# 80. 运行以下代码，会输出什么
+
+```js
+function changeArg(x) { x = 200 }
+
+let num = 100
+changeArg(num)
+console.log('changeArg num', num)
+
+let obj = { name: '双越' }
+changeArg(obj)
+console.log('changeArg obj', obj)
+
+function changeArgProp(x) {
+    x.name = '张三'
+}
+changeArgProp(obj)
+console.log('changeArgProp obj', obj)
+```
+
+## 分析
+
+调用函数，传递参数 —— **赋值**传递
+
+```js
+function fn(x, y) {
+    // 继续操作 x y
+}
+const num = 100
+const obj = { name: '双越' }
+fn(num, obj)
+```
+
+以上代码相当于
+
+```js
+const num = 100
+const obj = { name: '双越' }
+
+let x = num
+let y = obj
+// 继续操作 x y
+```
+
+执行题目代码分别输出 `100  {name: '双越'}  {name: '张三'}`
+
+# 81. 
