--- a/前端面试题之手写代码篇.md
+++ b/前端面试题之手写代码篇.md
@@ -1,3 +1,5 @@
+# 1. 深拷贝
+```js
 const deepColne = obj => {
     // 你的代码
     // 
@@ -15,6 +17,7 @@ const deepColne = obj => {
     }
     // 遍历保存属性值
     for(let key in obj) {
+        // 保证 key 不是原型上的属性
         if(obj.hasOwnProperty(key)) {
             res[key] = deepColne(obj[key])
         }
@@ -41,3 +44,7 @@ tao2.skill = ['cn', 'eng', 'jp']
 
 console.log('tao1: ', tao1)
 console.log('tao2: ', tao2)
+
+```
+# 2. 
+# 3. 
