--- a/前端面试题之手写代码篇.md
+++ b/前端面试题之手写代码篇.md
@@ -96,4 +96,93 @@ f2()
 // this:  { name: 'tao2' }
 // 4 5 6
 ```
-# 3. 
+# 3. 事件代理
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>test</title>
+</head>
+<body>
+    <div>
+        <span>1</span>
+        <button>2</button>
+    </div>
+</body>
+<script>
+const bindEvent = (elem, type, selector, fn) => {
+    if (fn == null) {
+        fn = selector
+        selector = null
+    }
+    elem.addEventListener(type, event => {
+        const target = event.target
+        if (selector) {
+            // 代理绑定
+            if (target.matches(selector)) {
+                fn.call(target, event)
+                // fn(event)
+            }
+        } else {
+            // 普通绑定
+            fn.call(target, event)
+            // fn(event)
+        }
+    })
+}
+
+// 普通绑定
+const div = document.querySelector('div')
+bindEvent(div, 'click', function (event) {
+    console.log(event.target)
+    // 可代理两个元素
+    // span button
+})
+
+// 代理绑定
+// const div = document.querySelector('div')
+// bindEvent(div, 'click', 'button', function (event) {
+//     console.log(event.target)
+//     // 只代理 button
+//     // button
+// })
+
+</script>
+</html>
+
+```
+# 4. ajax
+```js
+const ajaxXHR = (method, url) => {
+    // 你的代码
+    // 
+    // 0 未调用 send
+    // 1 已经调用 send 正在发送请求
+    // 2 send 完成已经接收到全部响应
+    // 3 正在解析响应
+    // 4 响应解析完成
+    const xhr = new XMLHttpRequest()
+    xhr.open(method, url, true)
+    xhr.onreadystatechange = () => {
+        if(xhr.readyState === 4) {
+            if(xhr.status === 200) {
+                console.log(xhr)
+            }
+        }
+    }
+}
+
+const ajaxFetch = url => {
+    // 你的代码
+    // 
+    // 需要设置才能使用 cookie
+    // 错误状态码不会 reject
+    return fetch(url).then(res => console.log(res))
+}
+
+ajaxXHR('GET', 'https://cdn2.thecatapi.com/images/ebv.jpg')
+ajaxFetch('https://cdn2.thecatapi.com/images/ebv.jpg')
+
+```
+# 5. 
