--- a/前端面试题之 手写 篇.md
+++ b/前端面试题之 手写 篇.md
@@ -59,6 +59,7 @@ console.log('tao2: ', tao2)
 // }
 
 ```
+
 # 2. bind
 ```js
 Function.prototype.myBind = function() {
@@ -96,6 +97,7 @@ f2()
 // this:  { name: 'tao2' }
 // 4 5 6
 ```
+
 # 3. 事件代理
 ```html
 <!DOCTYPE html>
@@ -152,6 +154,7 @@ bindEvent(div, 'click', function (event) {
 </html>
 
 ```
+
 # 4. ajax
 ```js
 const ajaxXHR = (method, url) => {
@@ -185,4 +188,85 @@ ajaxXHR('GET', 'https://cdn2.thecatapi.com/images/ebv.jpg')
 ajaxFetch('https://cdn2.thecatapi.com/images/ebv.jpg')
 
 ```
-# 5. 
+
+# 5. 防抖
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>test</title>
+</head>
+<body>
+    <input>
+</body>
+<script>
+const debounce = (fn) => {
+    // 你的代码
+    // 防抖 -> 等你消停了再执行
+    // 高频输入只执行一次
+    // 
+    let timer = null
+    return function() {
+        if(timer) {
+            clearTimeout(timer)
+        }
+        timer = setTimeout(() => {
+            fn()
+            // 保证只执行一次
+            timer = null
+        }, 1000)
+    }
+}
+
+const input = document.querySelector('input')
+
+input.addEventListener('keyup', debounce(function() {
+    console.log(input.value)
+}))
+
+</script>
+</html>
+```
+
+# 6. 节流
+```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>test</title>
+</head>
+<body>
+    <input>
+</body>
+<script>
+const throttle = (fn) => {
+    // 你的代码
+    // 节流 -> 按规定频率来执行
+    // 一秒触发一次
+    // 
+    let timer = null
+    return function() {
+        if(timer) {
+            return
+        }
+        timer = setTimeout(() => {
+            fn()
+            // 保证只执行一次
+            timer = null
+        }, 1000)
+    }
+}
+
+const input = document.querySelector('input')
+
+input.addEventListener('keyup', throttle(function() {
+    console.log(input.value)
+}))
+
+</script>
+</html>
+```
+
+# 7. 
