--- a/前端面试题之 手写 篇.md
+++ b/前端面试题之 手写 篇.md
@@ -57,7 +57,6 @@ console.log('tao2: ', tao2)
 //   addr: { city: 'jp' },
 //   skill: [ 'cn', 'eng', 'jp' ]
 // }
-
 ```
 
 # 2. bind
@@ -149,10 +148,8 @@ bindEvent(div, 'click', function (event) {
 //     // 只代理 button
 //     // button
 // })
-
 </script>
 </html>
-
 ```
 
 # 4. ajax
@@ -186,7 +183,6 @@ const ajaxFetch = url => {
 
 ajaxXHR('GET', 'https://cdn2.thecatapi.com/images/ebv.jpg')
 ajaxFetch('https://cdn2.thecatapi.com/images/ebv.jpg')
-
 ```
 
 # 5. 防抖
@@ -220,11 +216,9 @@ const debounce = (fn) => {
 }
 
 const input = document.querySelector('input')
-
 input.addEventListener('keyup', debounce(function() {
     console.log(input.value)
 }))
-
 </script>
 </html>
 ```
@@ -260,13 +254,113 @@ const throttle = (fn) => {
 }
 
 const input = document.querySelector('input')
-
 input.addEventListener('keyup', throttle(function() {
     console.log(input.value)
 }))
-
 </script>
 </html>
 ```
 
-# 7. 
+# 7. `flat`
+```js
+const flat = arr => {
+    // 你的代码
+    // 
+    // 递归
+    let isDeep = arr.some(item => item instanceof Array)
+    // 终止条件
+    if(!isDeep) {
+        return arr
+    }
+    // apply 将 arr 一个个传入
+    const res = Array.prototype.concat.apply([], arr)
+    // 把子问题答案交给父问题
+    return flat(res)
+}
+
+const res = flat( [1, 2, [3, 4, [10, 20, [100, 200]]], 5] )
+console.log(res)
+// [
+//     1,   2,   3, 4, 10,
+//    20, 100, 200, 5
+//  ]
+```
+
+# 8. `url` 参数转化为对象
+```js
+const queryToObj = () => {
+    const res = {}
+    const pList = new URLSearchParams(location.search)
+    pList.forEach((val, key) => {
+        res[key] = val
+    })
+    return res
+}
+// https://cn.bing.com/search?q=js&qs=n&form=QBRE&sp=-1&pq=js&sc=10-2&sk=&cvid=D67659431B10432D8D38207A4EF88565&ghsh=0&ghacc=0&ghpl=
+console.log(queryToObj()) 
+// {q: "js", qs: "n", form: "QBRE", sp: "-1", pq: "js", …}
+```
+
+# 9. `trim`
+```js
+const trim = s => {
+    return s.replace(/^\s+/, '').replace(/\s+$/, '')
+}
+
+console.log(trim('  j s  ')) 
+// j s
+```
+
+# 10. `isEqual`
+```js
+const isObject = (obj) => {
+    return typeof obj === 'object' && obj !== null
+}
+
+const isEqual = (obj1, obj2) => {
+    // 你的代码
+    // 
+    // 递归
+    // 终止条件
+    if (!isObject(obj1) || !isObject(obj2)) {
+        // 值类型
+        return obj1 === obj2
+    }
+    if (obj1 === obj2) {
+        return true
+    }
+    // 先判断 key
+    const obj1Keys = Object.keys(obj1)
+    const obj2Keys = Object.keys(obj2)
+    if (obj1Keys.length !== obj2Keys.length) {
+        return false
+    }
+    // 再判断值
+    for (let key in obj1) {
+        const res = isEqual(obj1[key], obj2[key])
+        if (!res) {
+            return false
+        }
+    }
+    return true
+}
+
+const obj1 = {
+    a: 100,
+    b: {
+        x: 100,
+        y: 200
+    }
+}
+const obj2 = {
+    a: 100,
+    b: {
+        x: 100,
+        y: 200
+    }
+}
+console.log( obj1 === obj2 )
+// false
+console.log(isEqual(obj1, obj2))
+// true
+```
