--- a/前端面试题之 浏览器 篇.md
+++ b/前端面试题之 浏览器 篇.md
@@ -26,3 +26,15 @@
     - 将 `dom` 树和 `cssom` 合成渲染树
     - 根据渲染树渲染页面
     - `注意` (遇到 `js` 暂停渲染因为共用一个线程)
+
+# 3. 内存泄漏的场景有哪些
+- 全局变量，事件，定时器的引用组件销毁时未删除
+
+# 4. 垃圾回收算法
+- 引用计数 (清除未被引用的, 循环引用情况有缺陷
+- 标记清除 (从根遍历各个属性, 得不到对象就删除
+
+# 5. 浏览器和 `node` 事件循环有什么区别
+- 浏览器: 微任务, `dom` 渲染, 宏任务
+- `node` 按类型优先级, 划分更细
+
