--- a/前端面试题之 网络 篇.md
+++ b/前端面试题之 网络 篇.md
@@ -9,4 +9,20 @@
 - `cors` (Cross-Origin Resource Sharing)
     - `Access-Control-Allow-Origin: '*';`
     - `Access-Control-Allow-Credentials: true; // 接收 cookie`
-    
+
+# 2. TCP 三次握手和四次挥手
+- 建立 `tcp` 连接确保双方都有收发数据的能力
+- 通过 `http` 协议传输内容
+- 三次握手
+    - c 发包 s 接收 (s 知道有 c 连接
+    - s 发包 c 接收 (c 知道 s 收到消息
+    - c 正式发数据
+- 四次挥手
+    - c 发包 s 接收 (s 知道请求结束
+    - s 发包 c 接收 (c 等待关闭
+    - s 发包 c 接收 (c 知道可以关闭
+    - c 发包 s 接收 (s 正式关闭
+
+# 3. 跨域为何需要 options 请求
+- `options` 请求就是对跨域请求之间的一次预检查
+
