--- a/前端面试题之 网络 篇.md
+++ b/前端面试题之 网络 篇.md
@@ -23,6 +23,47 @@
     - s 发包 c 接收 (c 知道可以关闭
     - c 发包 s 接收 (s 正式关闭
 
-# 3. 跨域为何需要 options 请求
+# 3. 跨域为何需要 `options` 请求
 - `options` 请求就是对跨域请求之间的一次预检查
 
+# 4. `jwt` (`json` `web` `token`
+- 后端验证登录成功后返回 `token`
+- 前端自行存储
+- 以后访问后端都带上 `token`
+
+# 5. `token` 和 `cookie` 区别
+- `token` 需要自己传递 (`authorization`
+- 需要自己存储
+- 没有跨越限制
+- 保存用户全部信息
+
+# 6. `session` 和 `jwt` 区别
+- `session` 存储在服务端可以快速封禁某用户
+- 占用服务端内存
+- 多进程不好同步 (`redis`
+- 有跨越限制
+- `jwt` 不占用服务端内存, 多进程无影响, 无跨域
+- 服务端密钥泄露则用户信息全部丢失
+- 体积大于 `cookie`
+
+# 7. `SSO` 单点登录
+- 设置 `cookie` `domain=主域名`
+- 登录校验都转发到 `sso` 负责
+- `oauth` 由第三方下发 `token` 并且去第三方认证
+
+# 8. `HTTP` 和 `UDP` 区别
+- `http` 应用层, `tcp` `udp` 传输层
+- `tcp` 有连接有断开, 稳定传输
+- `udp` 无连接无断开, 不稳定但效率高
+
+# 9. `HTTP` 1.0 和 1.1 和 2.0 区别
+- 1.0 支持基本的 `get` `post`
+- 1.1 支持缓存策略, 长连接, 断点续传 `206`, 支持 `put` `delete` 用于 `restful` `api`
+- 2.0 压缩 header, 服务端推送, 多路复用 (一次连接多个并行请求
+
+# 10. `HTTPS` 中间人攻击
+- 中间人伪造公钥给客户端
+- 通过自己的私钥解密拿到客户端和服务端通信的密钥
+- 解决: 
+    - 服务端使用正规的证书响应请求
+    - 对网站下发的公钥进行哈希校验
