--- a/前端面试题之 安全 篇.md
+++ b/前端面试题之 安全 篇.md
@@ -4,4 +4,15 @@
 
 # 2. `xsrf`
 - 诱导用户点击链接执行恶意脚本
-- 解决: 使用 `post` / `token`
+- 解决: 
+    - 使用 `post`
+    - 服务端下发 `token`
+    - 校验 `referrer`
+    - `cookie` 设置 `samesite`
+
+# 3. 点击劫持
+- `sameorigin` 禁止 `iframe` 跨域加载
+
+# 4. ddos
+
+# 5. sql 注入
