--- a/前端面试题之 性能 篇.md
+++ b/前端面试题之 性能 篇.md
@@ -15,3 +15,42 @@
 - 静态资源加哈希后缀
     - 文件不变则哈希不变则 `url` 不变
     - `url` 和文件不变则触发 `304`
+
+# 4. 减少重排
+- 集中修改样式
+- 先 `display` `none` 或 使用 `bfc`
+- 使用节流防抖
+- `createdocumentFragment` 批量操作 `dom`
+- 使用 `css3` 或 `requestAnimationFrame` 做动画
+
+# 5. `H5` 如何进行首屏优化
+- 路由懒加载
+- `ssr`
+- `app` 预取 (`js bridge`
+- 图片懒加载 (提前设置图片尺寸防止重排
+- `hybrid` (提前下载资源到 `app` 内部
+- 分页
+
+# 6. 如何渲染 10w 条数据
+- 自定义 `node` 中间层拆分数据
+- 虚拟列表 (只渲染可视区域, 随浏览器滚动创建销毁 `dom`
+
+# 7.  `Vue` 优化
+- `v-show`
+- `v-for` 使用 `key`
+- `computed` 缓存
+- `keep alive` 缓存组件
+- 异步组件 (使用时才加载
+- 路由懒加载
+- `ssr`
+
+# 56. 如何排查性能问题
+- 加载慢 
+    - `cdn`
+    - 路由懒加载
+    - 组件异步加载
+    - `http` 缓存
+- 渲染慢
+    - 优化服务端接口
+    - 优化组件内部逻辑
+    - `ssr`
