--- a/前端面试题之 网络 篇.md
+++ b/前端面试题之 网络 篇.md
@@ -67,3 +67,11 @@
 - 解决: 
     - 服务端使用正规的证书响应请求
     - 对网站下发的公钥进行哈希校验
+
+# 11. `WebSocket` 和 `HTTP` 区别
+- `ws` 可以双端通信
+- 没有跨越限制
+
+# 12. `WebSocket` 和 `HTTP` 长轮询的区别
+- `http` 需要等待服务端返回才能再次请
+- `ws` 可以双方任意发送
