--- a/前端面试题之 手写 篇.md
+++ b/前端面试题之 手写 篇.md
@@ -265,20 +265,23 @@ input.addEventListener('keyup', throttle(function() {
 ```js
 const flat = arr => {
     // 你的代码
-    // 
     // 递归
-    let isDeep = arr.some(item => item instanceof Array)
-    // 终止条件
-    if(!isDeep) {
-        return arr
-    }
-    // apply 将 arr 一个个传入
-    const res = Array.prototype.concat.apply([], arr)
-    // 把子问题答案交给父问题
-    return flat(res)
+    let res = []
+
+    arr.forEach(item => {
+        if (Array.isArray(item)) {
+            const flatItem = flat(item)
+            res = res.concat(flatItem)
+        } else {
+            res = res.concat(item)
+        }
+    })
+
+    return res
 }
 
 const res = flat( [1, 2, [3, 4, [10, 20, [100, 200]]], 5] )
+
 console.log(res)
 // [
 //     1,   2,   3, 4, 10,
@@ -363,4 +366,164 @@ console.log( obj1 === obj2 )
 // false
 console.log(isEqual(obj1, obj2))
 // true
+```
+
+# 11. `getType`
+```js
+const getType = x => {
+    // 你的代码
+    // null 无 toString 方法
+    const originType = Object.prototype.toString.call(x) 
+    // '[object String]'
+    const spaceIndex = originType.indexOf(' ')
+    const type = originType.slice(spaceIndex + 1, -1) 
+    // 'String'
+    return type.toLowerCase() 
+    // 'string'
+}
+
+console.info( getType(null) )
+console.info( getType(undefined) )
+console.info( getType(100) )
+console.info( getType('abc') )
+console.info( getType(true) )
+console.info( getType(Symbol()) )
+console.info( getType({}) )
+console.info( getType([]) )
+console.info( getType(() => {}) )
+```
+
+# 12. `apply`
+```js
+Function.prototype.myApply = function(context, args) {
+    // 你的代码
+    // 不会出现属性名称的覆盖
+    const fnKey = Symbol()
+    // this 就是当前的函数
+    context[fnKey] = this
+    // 绑定了 this
+    const res = context[fnKey](...args) 
+    delete context[fnKey] 
+
+    return res
+}
+
+const tao1 = {
+    name: 'tao1',
+}
+const tao2 = {
+    name: 'tao2',
+}
+
+const f1 = function(a, b, c) {
+    console.log('this: ', this)
+    console.log(a, b, c)
+}
+
+f1(1, 2, 3) 
+// this: global
+// 1 2 3
+f1.myApply(tao2, [4, 5, 6])
+// this:  { name: 'tao2', [Symbol()]: [Function: f1] }
+// 4 5 6
+```
+
+# 13. `call`
+```js
+Function.prototype.myCall = function(context, ...args) {
+    // 你的代码
+    // 不会出现属性名称的覆盖
+    const fnKey = Symbol()
+    // this 就是当前的函数
+    context[fnKey] = this
+    // 绑定了 this
+    const res = context[fnKey](...args) 
+    delete context[fnKey] 
+
+    return res
+}
+
+const tao1 = {
+    name: 'tao1',
+}
+const tao2 = {
+    name: 'tao2',
+}
+
+const f1 = function(a, b, c) {
+    console.log('this: ', this)
+    console.log(a, b, c)
+}
+
+f1(1, 2, 3) 
+// this: global
+// 1 2 3
+f1.myCall(tao2, 4, 5, 6)
+// this:  { name: 'tao2', [Symbol()]: [Function: f1] }
+// 4 5 6
+```
+
+# 14. `curry`
+```js
+const curry = function(fn) {
+    // 你的代码
+    // 传入函数的参数长度
+    const fnArgsLength = fn.length
+    let args = []
+    
+    function calc(...newArgs) {
+        args = [
+            ...args,
+            ...newArgs
+        ]
+        if (args.length < fnArgsLength) {
+            // 参数不够，返回函数
+            return calc
+        } else {
+            // 参数够了，返回执行结果
+            return fn(...args.slice(0, fnArgsLength))
+        }
+    }
+
+    return calc
+}
+
+const add = function(a, b, c) {
+    return a + b + c
+}
+const curryAdd = curry(add)
+console.log(curryAdd(10)(20)) // [Function: calc]
+// console.log(curryAdd(10)(20)(30)) // 60
+```
+
+# 15. `instanceof`
+```js
+const myInstanceof = (instance, origin) => {
+    if (instance == null) return false 
+
+    const type = typeof instance
+    if (type !== 'object' && type !== 'function') {
+        // 值类型
+        return false
+    }
+    // 为了防止修改 instance
+    let tempInstance = instance 
+    while (tempInstance) {
+        if (tempInstance.__proto__ === origin.prototype) {
+            return true // 配上了
+        }
+        // 未匹配
+        // 顺着原型链往上找
+        tempInstance = tempInstance.__proto__ 
+    }
+
+    return false
+}
+
+console.info( myInstanceof({}, Object) )
+console.info( myInstanceof([], Object) )
+console.info( myInstanceof([], Array) )
+console.info( myInstanceof({}, Array) )
+console.info( myInstanceof('abc', String) )
+console.info( myInstanceof('abc', Object) )
 ```
