--- a/前端面试题之 手写 篇.md
+++ b/前端面试题之 手写 篇.md
@@ -527,3 +527,5 @@ console.info( myInstanceof({}, Array) )
 console.info( myInstanceof('abc', String) )
 console.info( myInstanceof('abc', Object) )
 ```
+
+# 16. `LazyMan`
