--- a/前端面试题之 性能 篇.md
+++ b/前端面试题之 性能 篇.md
@@ -43,6 +43,10 @@
 - 异步组件 (使用时才加载
 - 路由懒加载
 - `ssr`
+- `v-for` 不能和 `v-if` 同时使用(每次 `for` 会重新触发 `if`
+- 自定义事件 `dom` 事件及时销毁
+- `vue2` `data` 层级不能太深
+- 
 
 # 56. 如何排查性能问题
 - 加载慢 
