--- a/数据类型的判断方法.md
+++ b/数据类型的判断方法.md
@@ -24,3 +24,27 @@ console.log("a".constructor) // function a
     - 右操作数必须是函数或类
     - 变量需要先声明
     - `console.log(a instanceof Object) // Error: a is not defined`
+
+# 4. `isPrototypeOf`
+- 是否出现在实例对象的原型链上
+
+# 5. `Object.prototype.toString.call`
+- 通过函数的动态 `this` 返回其类型
+
+# 6. `Symbol.toStringTag`
+- `Object.prototype.toString`会读取该值
+```js
+class MyArray {
+    get [Symbol.toStringTag](){
+        return "MyArray"
+    }
+}
+
+const a = new MyArray()
+
+console.log(Object.prototype.toString.call(a)) // "[object MyArray]"
+```
+
+# 7. 与固定值比较
+- `undefined` `null`
+
