--- a/面试/前端面试题之 网络 篇.md
+++ b/面试/前端面试题之 网络 篇.md
@@ -75,3 +75,10 @@
 # 12. `WebSocket` 和 `HTTP` 长轮询的区别
 - `http` 需要等待服务端返回才能再次请
 - `ws` 可以双方任意发送
+
+## `GET` / `POST` 区别
+- `GET` 发起查询请求
+- `POST` 发起提交请求
+- `GET` 参数拼接在 `URL`
+- `POST` 参数拼接在请求体
+- `POST` 易于防止 `CSRF`
