--- a/面试/前端面试题之 运行结果 篇.md
+++ b/面试/前端面试题之 运行结果 篇.md
@@ -94,3 +94,13 @@ changeArgProp(obj)
 console.log('changeArgProp obj', obj) // { name: 'sen' }
 ```
 
+## 8. `map` `parseInt`
+```js
+const res = [10, 20, 30].map(parseInt)
+console.log(res)
+// 拆解
+[10, 20, 30].map((num, index) => {
+    return parseInt(num, index)
+})
+// [ 10, NaN, NaN ]
+```
