--- a/面试/前端面试题之 安全 篇.md
+++ b/面试/前端面试题之 安全 篇.md
@@ -1,18 +1,20 @@
-# 1. `xss`
-- 嵌入 `js` 获取 `cookie`
-- 解决：替换特殊字符
+# 前端面试题之 性能 篇
 
-# 2. `xsrf`
+## `XSS`
+- 嵌入 `js` 获取 `cookie`
+- 可以通过替换特殊字符解决
+
+## `CSRF`
 - 诱导用户点击链接执行恶意脚本
 - 解决: 
-    - 使用 `post`
+    - 使用 `POST`
     - 服务端下发 `token`
     - 校验 `referrer`
     - `cookie` 设置 `samesite`
 
-# 3. 点击劫持
+## 点击劫持
 - `sameorigin` 禁止 `iframe` 跨域加载
 
-# 4. ddos
+## DDOS
 
-# 5. sql 注入
+## SQL 注入
