--- a/面试/前端面试题之 性能 篇.md
+++ b/面试/前端面试题之 性能 篇.md
@@ -1,60 +1,66 @@
-# 1. 让加载更快
-- 减少资源体积：压缩代码
-- 减少访问次数：合并代码, `ssr` 渲染
-- CDN（区域代理
+# 前端面试题之 性能 篇
 
-# 2. 让渲染更快
-- `css` 放 `head`, `js` 放 `body` 后
-- 尽早执行 `js (DOMContentLoaded`
+## 让加载更快
+- 压缩代码
+- 合并代码
+- `SSR`
+- `CDN`
+
+## 让渲染更快
+- `CSS` 放 `head`
+- `JS` 放 `body` 后
+-  `DOMContentLoaded` 尽早执行脚本
 - 懒加载
-- `dom` 查询缓存
-- 合并 `dom` 操作
-- 节流防抖
+- `DOM` 查询缓存
+- 合并 `DOM operatio`
+- 节流 防抖
 
-# 3. 缓存
+## 缓存
 - 静态资源加哈希后缀
-    - 文件不变则哈希不变则 `url` 不变
-    - `url` 和文件不变则触发 `304`
+    - 文件内容不变则哈希不变则 `URL` 不变
+    - 浏览器自动触发 `304`
 
-# 4. 减少重排
+## 减少重排
 - 集中修改样式
-- 先 `display` `none` 或 使用 `bfc`
+- 使用 `bfc` 先占据位置
 - 使用节流防抖
-- `createdocumentFragment` 批量操作 `dom`
-- 使用 `css3` 或 `requestAnimationFrame` 做动画
+- 使用 `createdocumentFragment` 批量操作 `DOM`
+- 使用 `CSS3` 或 `requestAnimationFrame` 做动画
 
-# 5. `H5` 如何进行首屏优化
+## 如何进行首屏优化
 - 路由懒加载
-- `ssr`
-- `app` 预取 (`js bridge`
-- 图片懒加载 (提前设置图片尺寸防止重排
-- `hybrid` (提前下载资源到 `app` 内部
+- `SSR`
+- `APP` 预取
+- 图片懒加载 提前设置图片尺寸防止重排
+- `hybrid` 提前下载资源到 `APP` 内部
 - 分页
 
-# 6. 如何渲染 10w 条数据
-- 自定义 `node` 中间层拆分数据
-- 虚拟列表 (只渲染可视区域, 随浏览器滚动创建销毁 `dom`
+## 如何渲染 10w 条数据
+- 自定义 `Node` 中间层拆分数据
+- 虚拟列表
+    - 只渲染可视区域 随浏览器滚动创建销毁 `DOM`
 
-# 7.  `Vue` 优化
+## `Vue` 优化
 - `v-show`
 - `v-for` 使用 `key`
 - `computed` 缓存
 - `keep alive` 缓存组件
-- 异步组件 (使用时才加载
+- 异步组件
 - 路由懒加载
-- `ssr`
-- `v-for` 不能和 `v-if` 同时使用(每次 `for` 会重新触发 `if`
-- 自定义事件 `dom` 事件及时销毁
-- `vue2` `data` 层级不能太深
-- 
+- `SSR`
+- `v-for` 不能和 `v-if` 同时使用 每次 `for` 会重新触发 `if`
+- 自定义事件和 `DOM` 事件及时销毁
+- `Vue2` 中 `data` 层级不能太深
 
-# 56. 如何排查性能问题
+## 如何排查性能问题
 - 加载慢 
-    - `cdn`
+    - `CDN`
     - 路由懒加载
     - 组件异步加载
-    - `http` 缓存
+    - `HTTP` 缓存
 - 渲染慢
     - 优化服务端接口
     - 优化组件内部逻辑
-    - `ssr`
+    - `SSR`
+
+##
