--- a/面试/前端面试题之 浏览器 篇.md
+++ b/面试/前端面试题之 浏览器 篇.md
@@ -1,44 +1,46 @@
-# 1. 浏览器本地存储
-- `cookie`
+# 前端面试题之 浏览器 篇
+
+## 浏览器本地存储
+- `Cookie`
     - 用于浏览器和后端通信
     - 后端 `set cookie` 后会自动保存在浏览器
     - 浏览器每次请求会自动带上 `cookie`
-    - 4 kb
+    - `4 kb`
     - 增加请求数据量
     - 作为后端的 `sessionId`
 - `localStorage`
     - 不会自动失效
     - 不会随请求发送
-    - 5 mb
+    - `5 mb`
 - `sessionStorage`
     - 浏览器关闭失效
     - 不会随请求发送
-    - 5 mb
+    - `5 mb`
 
-# 2. 网页加载过程
-- 从 `url` 到页面
-    - `dns` 解析域名为 `ip`
-    - 浏览器根据 `ip` 向后端发送 `http` 请求
-    - 后端处理 `http` 请求返回结果给浏览器
+## 网页加载过程
+- 从 `URL` 到页面
+    - `DNS` 解析域名为 `IP`
+    - 浏览器根据 `IP` 向后端发送 `HTTP` 请求
+    - 后端处理 `HTTP` 请求返回结果给浏览器
 - 页面渲染过程
-    - 根据 `html` 渲染成 `dom` 树
-    - 根据 `css` 生成 `cssom`
-    - 将 `dom` 树和 `cssom` 合成渲染树
+    - 根据 `HTML` 渲染成 `DOM` 树
+    - 根据 `CSS` 生成 `CSSOM`
+    - 将 `DOM` 树和 `CSSOM` 合成渲染树
     - 根据渲染树渲染页面
-    - `注意` (遇到 `js` 暂停渲染因为共用一个线程)
+    - 遇到 `JS` 暂停渲染因为共用一个线程
 
-# 3. 内存泄漏的场景有哪些
-- 全局变量，事件，定时器的引用组件销毁时未删除
+## 垃圾回收算法
+- 引用计数 
+    - 清除未被引用的
+    - 循环引用情况有缺陷
+- 标记清除
+    - 从根遍历各个属性 得不到对象就删除
 
-# 4. 垃圾回收算法
-- 引用计数 (清除未被引用的, 循环引用情况有缺陷
-- 标记清除 (从根遍历各个属性, 得不到对象就删除
+## `浏览器` / `Node` 事件循环区别
+- 浏览器从 `微任务` `DOM render` `宏任务`
+- `Node` 按类型优先级 划分更细
 
-# 5. 浏览器和 `node` 事件循环有什么区别
-- 浏览器: 微任务, `dom` 渲染, 宏任务
-- `node` 按类型优先级, 划分更细
-
-# 6. repaint 和 reflow 区别
+## `repaint` / `reflow` 区别
 - `repaint` 颜色变化
 - `reflow` 位置变化
 
