--- a/面试/前端面试题之 设计模式 篇.md
+++ b/面试/前端面试题之 设计模式 篇.md
@@ -1,6 +1,8 @@
-# 51. 前端常用的设计模式和使用场景
+# 前端面试题之 设计模式 篇
+
+## 前端常用的设计模式和使用场景
 - 单例模式
-    - `vuex store`
+    - `Vuex store`
 - 工厂模式
     - `createElement`
 - 代理模式
@@ -13,6 +15,8 @@
     - 原功能不变增加新功能
     - `decorator`
 
-# 52. 观察者模式和发布订阅模式的区别
-- 主体和观察者直接绑定
-- 发布者和观察者互相不认识 需要中间媒介
+## 观察者模式和发布订阅模式的区别
+- 观察者模式的主体和观察者直接绑定
+- 发布订阅的发布者和观察者互相不认识 需要中间媒介
+
+##
