--- a/随笔/数据类型的判断方法.md
+++ b/随笔/数据类型的判断方法.md
@@ -1,11 +1,13 @@
-# 1. `typeof`
+# 数据类型的判断方法
+
+## `typeof`
 - 只能识别基础数据类型和引用数据类型
 - 注意
     - `console.log(typeof null) // object`
     - `console.log(typeof NaN) // number`
     - `console.log(typeof document.all) // undefined`
 
-# 2. `constructor`
+## `constructor`
 - 指向创建实例对象的构造函数
 - 注意
     - `null` `undefined` 无 `constructor`
@@ -15,24 +17,27 @@
 String.prototype.constructor = function a() {
     return {}
 }
+
 console.log("a".constructor) // function a
 ```
 
-# 3. `instanceof`
+## `instanceof`
 - 在原型链上查找到则是其实例
 - 注意
     - 右操作数必须是函数或类
     - 变量需要先声明
     - `console.log(a instanceof Object) // Error: a is not defined`
 
-# 4. `isPrototypeOf`
+## `isPrototypeOf`
 - 是否出现在实例对象的原型链上
+- `prototypeObj.isPrototypeOf(object)`
 
-# 5. `Object.prototype.toString.call`
+## `Object.prototype.toString.call()`
 - 通过函数的动态 `this` 返回其类型
+- `Object.prototype.toString.call(cat)`
 
-# 6. `Symbol.toStringTag`
-- `Object.prototype.toString`会读取该值
+## `Symbol.toStringTag`
+- `Object.prototype.toString` 会读取该值
 ```js
 class MyArray {
     get [Symbol.toStringTag](){
@@ -45,6 +50,5 @@ const a = new MyArray()
 console.log(Object.prototype.toString.call(a)) // "[object MyArray]"
 ```
 
-# 7. 与固定值比较
+## 与固定值比较
 - `undefined` `null`
-
