--- a/随笔/创建数组的方式.md
+++ b/随笔/创建数组的方式.md
@@ -1,48 +1,56 @@
-# 1. 字面量
+# 创建数组的方式
+
+## 字面量
 ```js
-const arr = [1, 2, 3, ...[4, 5, 6]]; // 1,2,3,4,5,6
-const arr1 = [, , , , ,]; // [empty × 5]
-console.log("arr==", arr);
-console.log("arr1==", arr1);
+const arr = [1, 2, 3, ...[4, 5, 6]]
+const arr1 = [, , , , ,]
+
+console.log(arr) // [1,2,3,4,5,6]
+console.log(arr1) // [empty × 5]
 ```
 
-# 2. `new Array`
+## `new Array()`
 ```js
-const arr2 = new Array(1, 2, 3); // 1,2,3
-const arr3 = new Array("a"); //["a"]
-const arr4 = new Array(5) // [empty × 5]
-console.log("arr2 new Array==", arr2);
-console.log("arr3 new Array==", arr2);
-console.log("arr4 new Array==", arr3);
+const arr2 = new Array(1, 2, 3)
+const arr3 = new Array("a")
+const arr4 = new Array(5)
+
+console.log(arr2) // 1,2,3
+console.log(arr3) //["a"]
+console.log(arr4) // [empty × 5]
 ```
 
-# 3. `Array.of`
+## `Array.of()`
 ```js
-const arr5 = Array.of(5)  // [empty × 5]
-Array.of(1, 2, 3); // [1, 2, 3]
-console.log("arr5 Array.of ==", arr5);
+const arr5 = Array.of(5)
+Array.of(1, 2, 3) // [1, 2, 3]
+
+console.log(arr5) // [empty × 5]
 ```
 
-# 4. `Array.from`
+## `Array.from()`
 ```js
-const arr6 = Array.from([1, 2, 3]); // [1,2,3]
+const arr6 = Array.from([1, 2, 3])
 const arr7 = Array.from({ length: 3 }, function (value, index) {
     return index + 1
-}); // [1,2,3]
-const arr8 = Array.from({ 0: "a", 1: "b", 2: "c", length: 3 });  // ["a", "b", "c"]
-console.log("arr6 Array.from ==", arr6);
-console.log("arr7 Array.from ==", arr7);
-console.log("arr8 Array.from ==", arr8);
+})
+const arr8 = Array.from({ 0: "a", 1: "b", 2: "c", length: 3 })
+
+console.log(arr6) // [1,2,3]
+console.log(arr7) // [1,2,3]
+console.log(arr8) // ["a", "b", "c"]
 ```
 
 # 5. `Array.prototype.slice`
 ```js
-const arr9 = Array.prototype.slice.call([1, 2]) // [1, 2]
-console.log("arr9 Array.prototype.slice ==", arr9);
+const arr9 = Array.prototype.slice.call([1, 2])
+
+console.log(arr9) // [1, 2]
 ```
 
 # 6. `Array.prototype.concat`
 ```js
-const arr10 = Array.prototype.concat.call([], [1, 2, 3]) // [1,2,3]
-console.log("arr10 Array.prototype.concat ==", arr10);
+const arr10 = Array.prototype.concat.call([], [1, 2, 3])
+
+console.log(arr10) // [1,2,3]
 ```
