--- a/面试/前端面试题之 运行结果 篇.md
+++ b/面试/前端面试题之 运行结果 篇.md
@@ -1,4 +1,6 @@
-# 1
+# 前端面试题之 运行结果 篇
+
+## 1
 ```js
 function Foo() {
     Foo.a = function() { console.log(1) }
@@ -13,7 +15,7 @@ obj.a() // 2
 Foo.a() // 1
 ```
 
-# 2
+## 2
 ```js
 Promise.resolve().then(() => {
     console.log(0)
@@ -38,7 +40,7 @@ Promise.resolve().then(() => {
 // 0 1 2 3 4 5 6
 ```
 
-# 3
+## 3
 ```js
 let a = { n: 1 }
 let b = a
@@ -48,7 +50,7 @@ console.log(a.x) // undefined
 console.log(b.x) // { n: 2 }
 ```
 
-# 4
+## 4
 ```js
 let a = {}, b = '123', c = 123
 a[b] = 'b'
@@ -56,7 +58,7 @@ a[c] = 'c'
 console.log(a[b]) // 'c'
 ```
 
-# 5
+## 5
 ```js
 let a = {}, b = Symbol('123'), c = Symbol('123')
 a[b] = 'b'
@@ -64,7 +66,7 @@ a[c] = 'c'
 console.log(a[b]) // 'b'
 ```
 
-# 6
+## 6
 ```js
 let a = {}, b = { key:'123' }, c = { key:'456' }
 a[b] = 'b'
@@ -75,7 +77,7 @@ console.log(a[b]) // c
 // console.log(c.toString())
 ```
 
-# 7
+## 7
 ```js
 function changeArg(x) { x = 200 }
 
@@ -94,7 +96,7 @@ changeArgProp(obj)
 console.log('changeArgProp obj', obj) // { name: 'sen' }
 ```
 
-## 8. `map` `parseInt`
+## 8
 ```js
 const res = [10, 20, 30].map(parseInt)
 console.log(res)
