--- a/面试/前端面试题之 安全 篇.md
+++ b/面试/前端面试题之 安全 篇.md
@@ -1,19 +1,20 @@
-# 前端面试题之 性能 篇
+# 前端面试题之 `安全` 篇
 
-## `XSS`
-- 嵌入 `js` 获取 `cookie`
-- 可以通过替换特殊字符解决
+## `XSS` / Cross Site Scripting
+- 评论框输入脚本获取 `Cookie`
+- 通过替换特殊字符解决
 
-## `CSRF`
+## `CSRF` / Cross Site Request Forgery
 - 诱导用户点击链接执行恶意脚本
-- 解决: 
+- 解决
     - 使用 `POST`
-    - 服务端下发 `token`
-    - 校验 `referrer`
-    - `cookie` 设置 `samesite`
+    - 后端下发 `Token`
+    - 校验 `Referer`
+    - `Set-Cookie: SameSite=Strict` 仅允许同站请求携带
 
 ## 点击劫持
-- `sameorigin` 禁止 `iframe` 跨域加载
+- 使用恶意遮罩覆盖网页原本内容诱导用户点击
+- `X-Frame-Options: sameorigin` 禁止 `iframe` 跨域加载
 
 ## DDOS
 
