--- a/面试/前端面试题之 浏览器 篇.md
+++ b/面试/前端面试题之 浏览器 篇.md
@@ -1,19 +1,19 @@
 # 前端面试题之 浏览器 篇
 
-## 浏览器本地存储
+## 本地存储
 - `Cookie`
     - 用于浏览器和后端通信
-    - 后端 `set cookie` 后会自动保存在浏览器
-    - 浏览器每次请求会自动带上 `cookie`
+    - `Set-Cookie` 后会自动保存在浏览器
+    - 浏览器每次请求会自动带上
     - `4 kb`
     - 增加请求数据量
-    - 作为后端的 `sessionId`
+    - 作为服务端的 `sessionId`
 - `localStorage`
     - 不会自动失效
     - 不会随请求发送
     - `5 mb`
 - `sessionStorage`
-    - 浏览器关闭失效
+    - 页面关闭失效
     - 不会随请求发送
     - `5 mb`
 
@@ -27,7 +27,7 @@
     - 根据 `CSS` 生成 `CSSOM`
     - 将 `DOM` 树和 `CSSOM` 合成渲染树
     - 根据渲染树渲染页面
-    - 遇到 `JS` 暂停渲染因为共用一个线程
+    - 遇到脚本暂停渲染因为共用一个线程
 
 ## 垃圾回收算法
 - 引用计数 
@@ -36,13 +36,19 @@
 - 标记清除
     - 从根遍历各个属性 得不到对象就删除
 
-## `浏览器` / `Node` 事件循环区别
-- 浏览器从 `微任务` `DOM render` `宏任务`
-- `Node` 按类型优先级 划分更细
+## 事件循环
+- `微任务`
+    - `Promise`
+    - `MutaionObserver`
+- `DOM 渲染`
+- `宏任务`
+    - `setTimeout`
+    - `setInterval`
+    - `I/O`
+    - `UI 交互`
 
-## `repaint` / `reflow` 区别
+## `repaint` / `reflow`
 - `repaint` 颜色变化
 - `reflow` 位置变化
 
-
-
+## 
