--- a/面试/前端面试题之 安全 篇.md
+++ b/面试/前端面试题之 安全 篇.md
@@ -10,7 +10,7 @@
     - 使用 `POST`
     - 后端下发 `Token`
     - 校验 `Referer`
-    - `Set-Cookie: SameSite=Strict` 仅允许同站请求携带
+    - `Set-Cookie: SameSite=Strict;` 仅允许同站请求携带
 
 ## 点击劫持
 - 使用恶意遮罩覆盖网页原本内容诱导用户点击
