--- a/面试/前端面试题之 设计模式 篇.md
+++ b/面试/前端面试题之 设计模式 篇.md
@@ -1,6 +1,6 @@
 # 前端面试题之 设计模式 篇
 
-## 前端常用的设计模式和使用场景
+## 前端设计模式
 - 单例模式
     - `Vuex store`
 - 工厂模式
@@ -15,7 +15,7 @@
     - 原功能不变增加新功能
     - `decorator`
 
-## 观察者模式和发布订阅模式的区别
+## 观察者 / 发布订阅
 - 观察者模式的主体和观察者直接绑定
 - 发布订阅的发布者和观察者互相不认识 需要中间媒介
 
