--- a/面试/前端面试题之 网络 篇.md
+++ b/面试/前端面试题之 网络 篇.md
@@ -1,18 +1,20 @@
+# 前端面试题之 网络 篇
+
 ## 跨域解决方案
-- `Ajax` 请求要求 协议/域名/端口 相同
+- `Ajax` 要求 `协议/域名/端口` 相同
 - `JSONP` JSON with Padding
     - `script` 的无跨域限制
     - 服务端可以动态拼接数据返回
     - 前端定义回调函数 `window.callBack = function(data) {}`
     - 后端返回字符串 `callBack({name: 'tao'})`
     - 前端自动调用 `callBack`
-- `CORS` Cross-Origin Resource Sharing
+- `CORS` Cross Origin Resource Sharing
     - `Access-Control-Allow-Origin: '*';`
-    - `Access-Control-Allow-Credentials: true; // 接收 cookie`
+    - `Access-Control-Allow-Credentials: true; // 接收 Cookie`
 
-## TCP 三次握手和四次挥手
-- 建立 `tcp` 连接确保双方都有收发数据的能力
-- 通过 `http` 协议传输内容
+## 三次握手 / 四次挥手
+- 建立 `TCP` 连接确保双方都有收发数据的能力
+- 通过 `HTTP` 协议传输内容
 - 三次握手
     - c 发包 s 接收 (s 知道有 c 连接
     - s 发包 c 接收 (c 知道 s 收到消息
@@ -23,35 +25,35 @@
     - s 发包 c 接收 (c 知道可以关闭
     - c 发包 s 接收 (s 正式关闭
 
-## 跨域为何需要 `options` 请求
-- `options` 请求就是对跨域请求之间的一次预检查
+## `OPTIONS` 请求
+- `OPTIONS` 请求就是对跨域请求之间的一次预检查
 
 ## `JWT` JSON Web Token
-- 后端验证登录成功后返回 `token`
+- 后端验证登录成功后返回 `Token`
 - 前端自行存储
-- 以后访问后端手动带上 `token`
+- 以后访问后端手动带上 `Token`
 
 ## `Token` 和 `Cookie` 区别
 - `Token` 需要自己传递
 - 需要自己存储
-- 没有跨越限制
+- 没有跨域限制
 - 保存用户全部信息
 
 ## `Session` 和 `JWT` 区别
 - `Session` 存储在服务端可以快速封禁某用户
 - 占用服务端内存
 - 多进程不好同步可以使用 `redis`
-- 有跨越限制
+- 有跨域限制
 - `JWT` 不占用服务端内存 多进程无影响 无跨域
 - 服务端密钥泄露则用户信息全部丢失
 - 体积大于 `Cookie`
 
 ## `SSO` 单点登录
-- 设置 `cookie` `domain=主域名`
-- 登录校验都转发到 `SSO` 负责
+- `Cookie: domain=google.com` 实现跨域
+- 登录校验都转发到 `SSO`
 - `Oauth` 由第三方下发 `Token` 并且去第三方认证
 
-## `HTTP` / `UDP` 区别
+## `HTTP` / `UDP`
 - `HTTP` 应用层
 - `TCP / UDP` 传输层
 - `TCP` 有连接有断开 稳定传输
