--- a/面试/前端面试题之 性能 篇.md
+++ b/面试/前端面试题之 性能 篇.md
@@ -22,18 +22,16 @@
 
 ## 减少重排
 - 集中修改样式
-- 使用 `bfc` 先占据位置
-- 使用节流防抖
-- 使用 `createdocumentFragment` 批量操作 `DOM`
-- 使用 `CSS3` 或 `requestAnimationFrame` 做动画
+- `BFC` 先占据位置
+- 批量操作 `DOM`
+- `CSS3` 硬件加速
 
 ## 如何进行首屏优化
-- 路由懒加载
 - `SSR`
-- `APP` 预取
-- 图片懒加载 提前设置图片尺寸防止重排
-- `hybrid` 提前下载资源到 `APP` 内部
 - 分页
+- 路由懒加载
+- `APP` 预取
+- 懒加载图片提前设置尺寸
 
 ## 如何渲染 10w 条数据
 - 自定义 `Node` 中间层拆分数据
@@ -42,9 +40,9 @@
 
 ## `Vue` 优化
 - `v-show`
-- `v-for` 使用 `key`
-- `computed` 缓存
-- `keep alive` 缓存组件
+- `v-for key`
+- `computed`
+- `keep-alive`
 - 异步组件
 - 路由懒加载
 - `SSR`
