--- a/面试/前端面试题之 网络 篇.md
+++ b/面试/前端面试题之 网络 篇.md
@@ -59,7 +59,7 @@
 - `TCP` 有连接有断开 稳定传输
 - `UDP` 无连接无断开 不稳定但效率高
 
-## `HTTP 1.0 / 1.1 / 2.0` 区别
+## `HTTP 1.0 / 1.1 / 2.0`
 - 1.0 `GET` `POST`
 - 1.1 `缓存` `长连接` `断点续传206`
 - 2.0 `压缩header` `服务端推送` `多路复用 一次连接多个并行请求` 
@@ -71,16 +71,16 @@
     - 服务端使用正规的证书响应请求
     - 对网站下发的公钥进行哈希校验
 
-## `WebSocket` / `HTTP` 区别
+## `WebSocket` / `HTTP`
 - `WebSocket` 可以双端通信
 - `WebSocket` 没有跨越限制
 - `HTTP` 传输可靠
 
-## `WebSocket` 和 `HTTP` 长轮询的区别
+## `WebSocket` / `HTTP` 长轮询
 - `HTTP` 需要等待服务端返回才能再次请
 - `WebSocket` 可以双方任意发送
 
-## `GET` / `POST` 区别
+## `GET` / `POST`
 - `GET` 发起查询请求
 - `POST` 发起提交请求
 - `GET` 参数拼接在 `URL`
