--- a/随笔/创建数组的方式.md
+++ b/随笔/创建数组的方式.md
@@ -41,14 +41,14 @@ console.log(arr7) // [1,2,3]
 console.log(arr8) // ["a", "b", "c"]
 ```
 
-## `Array.prototype.slice`
+## `Array.prototype.slice()`
 ```js
 const arr9 = Array.prototype.slice.call([1, 2])
 
 console.log(arr9) // [1, 2]
 ```
 
-## `Array.prototype.concat`
+## `Array.prototype.concat()`
 ```js
 const arr10 = Array.prototype.concat.call([], [1, 2, 3])
 
