--- a/随笔/数据类型的判断方法.md
+++ b/随笔/数据类型的判断方法.md
@@ -1,6 +1,6 @@
 # 数据类型的判断方法
 
-## `typeof`
+## `typeof()`
 - 只能识别基础数据类型和引用数据类型
 - 注意
     - `console.log(typeof null) // object`
@@ -21,18 +21,18 @@ String.prototype.constructor = function a() {
 console.log("a".constructor) // function a
 ```
 
-## `instanceof`
+## `instanceof()`
 - 在原型链上查找到则是其实例
 - 注意
     - 右操作数必须是函数或类
     - 变量需要先声明
     - `console.log(a instanceof Object) // Error: a is not defined`
 
-## `isPrototypeOf`
+## `isPrototypeOf()`
 - 是否出现在实例对象的原型链上
 - `prototypeObj.isPrototypeOf(object)`
 
-## `Object.prototype.toString.call()`
+## `toString.call()`
 - 通过函数的动态 `this` 返回其类型
 - `Object.prototype.toString.call(cat)`
 
