--- a/面试/前端面试题之 设计模式 篇.md
+++ b/面试/前端面试题之 设计模式 篇.md
@@ -2,18 +2,18 @@
 
 ## 前端设计模式
 - 单例模式
-    - `Vuex store`
+    - Vuex store
 - 工厂模式
-    - `createElement`
+    - createElement
 - 代理模式
-    - `proxy`
+    - proxy
 - 观察者
-    - `addEventlistener`
+    - addEventlistener
 - 发布订阅
-    - `on emit`
+    - on emit
 - 装饰器
     - 原功能不变增加新功能
-    - `decorator`
+    - decorator
 
 ## 观察者 / 发布订阅
 - 观察者模式的主体和观察者直接绑定
