--- a/面试/前端面试题之 网络 篇.md
+++ b/面试/前端面试题之 网络 篇.md
@@ -73,8 +73,8 @@
 
 ## WebSocket / HTTP
 - WebSocket 可以双端通信
-- WebSocket 没有跨越限制
-- HTTP 传输可靠
+- WebSocket 没有同源限制
+- WebSocket 建立连接后不再需要交换 header
 
 ## WebSocket / HTTP 长轮询
 - HTTP 需要等待服务端返回才能再次请
