--- a/面试/前端面试题之 网络 篇.md
+++ b/面试/前端面试题之 网络 篇.md
@@ -75,9 +75,10 @@
 - WebSocket 可以双端通信
 - WebSocket 没有同源限制
 - WebSocket 建立连接后不再需要交换 header
+- 都基于 TCP
 
 ## WebSocket / HTTP 长轮询
-- HTTP 需要等待服务端返回才能再次请
+- HTTP 需要等待服务端返回才能再次请求
 - WebSocket 可以双方任意发送
 
 ## GET / POST
