--- a/随笔/前端宿主浏览器.md
+++ b/随笔/前端宿主浏览器.md
@@ -45,4 +45,17 @@
 - 先缓存 offset
 - 动画元素使用绝对定位新建定位层脱离文档流
 
-## 
+## 时间线
+- 浏览器加载页面起到加载结束的过程按顺序发生的每件事的总流程
+- 生成 document 对象 js 生效
+- 解析文档 构建 dom 树
+- link 开新线程，异步加载 css 外部文件
+- dom 树和 css 树同时构建
+- 没有设置异步 script 则阻碍文档解析，等待 js 加载执行完成后再解析
+- 如果是异步 script 异步加载 js 不阻碍解析文档，不能使用 document.write
+- 解析文档遇到 img 先解析节点，创建加载线程异步加载图片资源，不阻塞解析文档
+- 文档解析完成 defer script 再开始执行
+- 文档解析完成 DOMContentLoaded 事件
+- 
+
+
